--- a/po/en.po
+++ b/po/en.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-07-25 16:21+0200\n"
+"POT-Creation-Date: 2012-08-05 10:00+0200\n"
 "PO-Revision-Date: 2005-11-17 20:53+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -30,13 +30,10 @@ msgstr ""
 "\n"
 "After pressing OK, please wait!"
 
-#
 msgid ""
 "\n"
-"Backup your Dreambox settings."
+"Backup your receiver settings."
 msgstr ""
-"\n"
-"Backup your Dreambox settings."
 
 #
 msgid ""
@@ -46,21 +43,15 @@ msgstr ""
 "\n"
 "Edit the upgrade source address."
 
-#
 msgid ""
 "\n"
-"Manage extensions or plugins for your Dreambox"
+"Manage extensions or plugins for your receiver"
 msgstr ""
-"\n"
-"Manage extensions or plugins for your Dreambox"
 
-#
 msgid ""
 "\n"
-"Online update of your Dreambox software."
+"Online update of your receiver software."
 msgstr ""
-"\n"
-"Online update of your Dreambox software."
 
 #
 msgid ""
@@ -73,26 +64,20 @@ msgstr ""
 #
 msgid ""
 "\n"
-"Restore your Dreambox settings."
-msgstr ""
-"\n"
-"Restore your Dreambox settings."
-
-#
-msgid ""
-"\n"
-"Restore your Dreambox with a new firmware."
-msgstr ""
-"\n"
-"Restore your Dreambox with a new firmware."
-
-#
-msgid ""
-"\n"
 "Restore your backups by date."
 msgstr ""
 "\n"
 "Restore your backups by date."
+
+msgid ""
+"\n"
+"Restore your receiver settings."
+msgstr ""
+
+msgid ""
+"\n"
+"Restore your receiver with a new firmware."
+msgstr ""
 
 #
 msgid ""
@@ -166,6 +151,9 @@ msgstr ""
 msgid "%2d:%02d:%02d"
 msgstr ""
 
+msgid "%A %d %B"
+msgstr ""
+
 #. TRANSLATORS: long date representations dayname daynum monthname in strftime() format! See 'man strftime'
 msgid "%A %e %B"
 msgstr ""
@@ -222,6 +210,9 @@ msgstr[1] ""
 #, python-format
 msgid "%d services found!"
 msgstr "%d services found!"
+
+msgid "%d-%m"
+msgstr ""
 
 #
 msgid "%d.%B %Y"
@@ -407,21 +398,15 @@ msgstr ""
 msgid "A demo plugin for TPM usage."
 msgstr ""
 
-#
 msgid ""
 "A finished record timer wants to set your\n"
-"Dreambox to standby. Do that now?"
+"receiver to standby. Do that now?"
 msgstr ""
-"A finished record timer wants to set your\n"
-"Dreambox to standby. Do that now?"
 
-#
 msgid ""
 "A finished record timer wants to shut down\n"
-"your Dreambox. Shutdown now?"
+"your receiver. Shutdown now?"
 msgstr ""
-"A finished record timer wants to shut down\n"
-"your Dreambox. Shutdown now?"
 
 #
 msgid "A graphical EPG for all services of an specific bouquet"
@@ -484,21 +469,15 @@ msgstr ""
 "\n"
 "Do you want to disable the second network interface?"
 
-#
 msgid ""
 "A sleep timer wants to set your\n"
-"Dreambox to standby. Do that now?"
+"receiver to standby. Do that now?"
 msgstr ""
-"A sleep timer wants to set your\n"
-"Dreambox to standby. Do that now?"
 
-#
 msgid ""
 "A sleep timer wants to shut down\n"
-"your Dreambox. Shutdown now?"
+"your receiver. Shutdown now?"
 msgstr ""
-"A sleep timer wants to shut down\n"
-"your Dreambox. Shutdown now?"
 
 #
 msgid "A small overview of the available icon states and actions."
@@ -614,13 +593,10 @@ msgstr "Add to favourites"
 msgid "Add/Remove timer for current event"
 msgstr ""
 
-#
 msgid ""
-"Adds enigma2 settings and dreambox model informations like SN, rev... if "
+"Adds enigma2 settings and receiver model informations like SN, rev... if "
 "enabled."
 msgstr ""
-"Adds enigma2 settings and dreambox model informations like SN, rev... if "
-"enabled."
 
 #
 msgid "Adds network configuration if enabled."
@@ -679,13 +655,10 @@ msgstr "After event"
 msgid "After pressing OK, please wait!"
 msgstr ""
 
-#
 msgid ""
 "After the start wizard is completed, you need to protect single services. "
-"Refer to your dreambox's manual on how to do that."
+"Refer to your receiver's manual on how to do that."
 msgstr ""
-"After the start wizard is completed, you need to protect single services. "
-"Refer to your dreambox's manual on how to do that."
 
 #
 msgid "Album"
@@ -1421,9 +1394,8 @@ msgstr ""
 msgid "Copy"
 msgstr ""
 
-#
-msgid "Could not connect to Dreambox .NFI Image Feed Server:"
-msgstr "Could not connect to Dreambox .NFI Image Feed Server:"
+msgid "Could not connect to receiver .NFI Image Feed Server:"
+msgstr ""
 
 #
 msgid "Could not load Medium! No disc inserted?"
@@ -1458,13 +1430,10 @@ msgstr "CrashlogAutoSubmit settings"
 msgid "CrashlogAutoSubmit settings..."
 msgstr "CrashlogAutoSubmit settings..."
 
-#
 msgid ""
 "Crashlogs found!\n"
-"Send them to Dream Multimedia?"
+"Send them to the Image Developper?"
 msgstr ""
-"Crashlogs found!\n"
-"Send them to Dream Multimedia?"
 
 #
 msgid "Create DVD-ISO"
@@ -1499,6 +1468,9 @@ msgid "Current Transponder"
 msgstr "Current Transponder"
 
 msgid "Current device: "
+msgstr ""
+
+msgid "Current event EPG"
 msgstr ""
 
 #
@@ -1893,9 +1865,8 @@ msgstr "Do you want to do another manual service scan?"
 msgid "Do you want to download the image to %s ?"
 msgstr ""
 
-#
-msgid "Do you want to enable the parental control feature on your dreambox?"
-msgstr "Do you want to enable the parental control feature on your dreambox?"
+msgid "Do you want to enable the parental control feature on your receiver?"
+msgstr ""
 
 #
 msgid "Do you want to install the package:\n"
@@ -1909,9 +1880,8 @@ msgstr "Do you want to play DVD in drive?"
 msgid "Do you want to preview this DVD before burning?"
 msgstr "Do you want to preview this DVD before burning?"
 
-#
-msgid "Do you want to reboot your Dreambox?"
-msgstr "Do you want to reboot your Dreambox?"
+msgid "Do you want to reboot your receiver?"
+msgstr ""
 
 #
 msgid "Do you want to remove the package:\n"
@@ -1933,17 +1903,13 @@ msgstr ""
 "Do you want to submit your email address and name so that we can contact you "
 "if needed?"
 
-#
-msgid "Do you want to update your Dreambox?"
-msgstr "Do you want to update your Dreambox?"
+msgid "Do you want to update your receiver?"
+msgstr ""
 
-#
 msgid ""
-"Do you want to update your Dreambox?\n"
+"Do you want to update your receiver?\n"
 "After pressing OK, please wait!"
 msgstr ""
-"Do you want to update your Dreambox?\n"
-"After pressing OK, please wait!"
 
 #
 msgid "Do you want to upgrade the package:\n"
@@ -2005,14 +1971,6 @@ msgstr "Downloading"
 #
 msgid "Downloading plugin information. Please wait..."
 msgstr "Downloading plugin information. Please wait..."
-
-#
-msgid "Dreambox format data DVD (HDTV compatible)"
-msgstr "Dreambox format data DVD (HDTV compatible)"
-
-#
-msgid "Dreambox software because updates are available."
-msgstr "Dreambox software because updates are available."
 
 #
 msgid "Dutch"
@@ -2079,13 +2037,11 @@ msgstr "Edit services list"
 msgid "Edit settings"
 msgstr "Edit settings"
 
-#
-msgid "Edit the Nameserver configuration of your Dreambox.\n"
-msgstr "Edit the Nameserver configuration of your Dreambox.\n"
+msgid "Edit the Nameserver configuration of your receiver.\n"
+msgstr ""
 
-#
-msgid "Edit the network configuration of your Dreambox.\n"
-msgstr "Edit the network configuration of your Dreambox.\n"
+msgid "Edit the network configuration of your receiver.\n"
+msgstr ""
 
 #
 msgid "Edit title"
@@ -2589,7 +2545,7 @@ msgstr ""
 msgid "GotoX calibration"
 msgstr ""
 
-msgid "Graph MEpg Settings"
+msgid "GraphMultiEpg Settings"
 msgstr ""
 
 #
@@ -3681,9 +3637,8 @@ msgstr "No, but restart from begin"
 msgid "No, do nothing."
 msgstr "No, do nothing."
 
-#
-msgid "No, just start my dreambox"
-msgstr "No, just start my dreambox"
+msgid "No, just start my receiver"
+msgstr ""
 
 msgid "No, never"
 msgstr ""
@@ -3932,6 +3887,12 @@ msgstr "Phone number"
 msgid "PiPSetup"
 msgstr "PiPSetup"
 
+msgid "Picon"
+msgstr ""
+
+msgid "Picon and Service Name"
+msgstr ""
+
 #
 msgid "PicturePlayer"
 msgstr "PicturePlayer"
@@ -4096,6 +4057,9 @@ msgstr "Please press OK to continue."
 #
 msgid "Please press OK!"
 msgstr "Please press OK!"
+
+msgid "Please select a default EPG type..."
+msgstr ""
 
 #
 msgid "Please select a playlist to delete..."
@@ -5074,6 +5038,9 @@ msgstr "Select channel to record from"
 msgid "Select copy destination for:"
 msgstr ""
 
+msgid "Select default EPG type..."
+msgstr ""
+
 msgid "Select desired image from feed list"
 msgstr ""
 
@@ -5156,6 +5123,9 @@ msgstr "Serbian"
 msgid "Service"
 msgstr "Service"
 
+msgid "Service Name"
+msgstr ""
+
 #
 msgid "Service Scan"
 msgstr "Service Scan"
@@ -5163,6 +5133,9 @@ msgstr "Service Scan"
 #
 msgid "Service Searching"
 msgstr "Service Searching"
+
+msgid "Service Title mode"
+msgstr ""
 
 #
 msgid "Service has been added to the favourites."
@@ -5294,12 +5267,6 @@ msgstr "Show Info"
 msgid "Show Message when Recording starts"
 msgstr "Show Message when Recording starts"
 
-msgid "Show Picons"
-msgstr ""
-
-msgid "Show Service Names "
-msgstr ""
-
 #
 msgid "Show WLAN Status"
 msgstr "Show WLAN Status"
@@ -5371,9 +5338,8 @@ msgstr "Shows the state of your wireless LAN connection.\n"
 msgid "Shutdown"
 msgstr "Shutdown"
 
-#
-msgid "Shutdown Dreambox after"
-msgstr "Shutdown Dreambox after"
+msgid "Shutdown receiver after"
+msgstr ""
 
 msgid "Side by Side"
 msgstr ""
@@ -5851,9 +5817,8 @@ msgstr "Test Type"
 msgid "Test mode"
 msgstr "Test mode"
 
-#
-msgid "Test the network configuration of your Dreambox.\n"
-msgstr "Test the network configuration of your Dreambox.\n"
+msgid "Test the network configuration of your receiver.\n"
+msgstr ""
 
 #
 msgid "Test-Messagebox?"
@@ -5876,23 +5841,16 @@ msgstr ""
 "Thank you for using the wizard.\n"
 "Please press OK to continue."
 
-#
 msgid ""
 "Thank you for using the wizard. Your box is now ready to use.\n"
-"Please press OK to start using your Dreambox."
+"Please press OK to start using your receiver."
 msgstr ""
-"Thank you for using the wizard. Your box is now ready to use.\n"
-"Please press OK to start using your Dreambox."
 
-#
 msgid ""
 "The DVD standard doesn't support H.264 (HDTV) video streams. Do you want to "
-"create a Dreambox format data DVD (which will not play in stand-alone DVD "
+"create a special format data DVD (which will not play in stand-alone DVD "
 "players) instead?"
 msgstr ""
-"The DVD standard doesn't support H.264 (HDTV) video streams. Do you want to "
-"create a Dreambox format data DVD (which will not play in stand-alone DVD "
-"players) instead?"
 
 #
 msgid ""
@@ -5978,13 +5936,10 @@ msgstr ""
 msgid "The installation of the default services lists is finished."
 msgstr "The installation of the default services lists is finished."
 
-#
 msgid ""
 "The installation of the default settings is finished. You can now continue "
-"configuring your Dreambox by pressing the OK button on the remote control."
+"configuring your receiver by pressing the OK button on the remote control."
 msgstr ""
-"The installation of the default settings is finished. You can now continue "
-"configuring your Dreambox by pressing the OK button on the remote control."
 
 msgid "The md5sum validation failed, the file may be corrupted!"
 msgstr ""
@@ -6112,17 +6067,12 @@ msgstr ""
 "content on the disc."
 
 #
-#, python-format
-msgid "This Dreambox can't decode %s streams!"
-msgstr "This Dreambox can't decode %s streams!"
-
-#
 msgid "This is step number 2."
 msgstr "This is step number 2."
 
 msgid ""
 "This plugin creates a USB stick which can be used to update the firmware of "
-"your Dreambox without the need for a network or WLAN connection.\n"
+"your receiver without the need for a network or WLAN connection.\n"
 "First, a USB stick needs to be prepared so that it becomes bootable.\n"
 "In the next step, an NFI image file can be downloaded from the update server "
 "and saved on the USB stick.\n"
@@ -6145,6 +6095,10 @@ msgstr "This plugin will be installed."
 #
 msgid "This plugin will be removed."
 msgstr "This plugin will be removed."
+
+#, python-format
+msgid "This receiver can't decode %s streams!"
+msgstr ""
 
 #
 msgid ""
@@ -6331,7 +6285,7 @@ msgid "To subtitle selection"
 msgstr ""
 
 msgid ""
-"To update your Dreambox firmware, please follow these steps:\n"
+"To update your receiver firmware, please follow these steps:\n"
 "1) Turn off your box with the rear power switch and make sure the bootable "
 "USB stick is plugged in.\n"
 "2) Turn mains back on and hold the DOWN button on the front panel pressed "
@@ -6576,17 +6530,15 @@ msgstr ""
 msgid "Upgrade finished."
 msgstr "Upgrade finished."
 
-#
-msgid "Upgrade finished. Do you want to reboot your Dreambox?"
-msgstr "Upgrade finished. Do you want to reboot your Dreambox?"
+msgid "Upgrade finished. Do you want to reboot your receiver?"
+msgstr ""
 
 #
 msgid "Upgrading"
 msgstr "Upgrading"
 
-#
-msgid "Upgrading Dreambox... Please wait"
-msgstr "Upgrading Dreambox... Please wait"
+msgid "Upgrading receiver... Please wait"
+msgstr ""
 
 #
 msgid "Use"
@@ -6966,59 +6918,36 @@ msgstr ""
 "\n"
 "Then seek to the end, press OK, select 'end cut'. That's it."
 
-#
 msgid ""
 "Welcome to the Image upgrade wizard. The wizard will assist you in upgrading "
-"the firmware of your Dreambox by providing a backup facility for your "
+"the firmware of your receiver by providing a backup facility for your "
 "current settings and a short explanation of how to upgrade your firmware."
 msgstr ""
-"Welcome to the Image upgrade wizard. The wizard will assist you in upgrading "
-"the firmware of your Dreambox by providing a backup facility for your "
-"current settings and a short explanation of how to upgrade your firmware."
 
-#
 msgid ""
 "Welcome to the cleanup wizard.\n"
 "\n"
 "We have detected that your available internal memory has dropped below 2MB.\n"
-"To ensure stable operation of your Dreambox, the internal memory should be "
+"To ensure stable operation of your receiver, the internal memory should be "
 "cleaned up.\n"
 "You can use this wizard to remove some extensions.\n"
 msgstr ""
-"Welcome to the cleanup wizard.\n"
-"\n"
-"We have detected that your available internal memory has dropped below 2MB.\n"
-"To ensure stable operation of your Dreambox, the internal memory should be "
-"cleaned up.\n"
-"You can use this wizard to remove some extensions.\n"
 
-#
 msgid ""
 "Welcome.\n"
 "\n"
-"If you want to connect your Dreambox to the Internet, this wizard will guide "
-"you through the basic network setup of your Dreambox.\n"
+"If you want to connect your receiver to the Internet, this wizard will guide "
+"you through the basic network setup of your receiver.\n"
 "\n"
 "Press OK to start configuring your network"
 msgstr ""
-"Welcome.\n"
-"\n"
-"If you want to connect your Dreambox to the Internet, this wizard will guide "
-"you through the basic network setup of your Dreambox.\n"
-"\n"
-"Press OK to start configuring your network"
 
-#
 msgid ""
 "Welcome.\n"
 "\n"
-"This start wizard will guide you through the basic setup of your Dreambox.\n"
+"This start wizard will guide you through the basic setup of your receiver.\n"
 "Press the OK button on your remote control to move to the next step."
 msgstr ""
-"Welcome.\n"
-"\n"
-"This start wizard will guide you through the basic setup of your Dreambox.\n"
-"Press the OK button on your remote control to move to the next step."
 
 #
 msgid "Welcome..."
@@ -7190,9 +7119,8 @@ msgstr ""
 msgid "You can install this plugin."
 msgstr "You can install this plugin."
 
-#
-msgid "You can only burn Dreambox recordings!"
-msgstr "You can only burn Dreambox recordings!"
+msgid "You can only burn receiver recordings!"
+msgstr ""
 
 #
 msgid "You can remove this plugin."
@@ -7252,19 +7180,13 @@ msgstr ""
 msgid "You have to wait %s!"
 msgstr "You have to wait %s!"
 
-#
 msgid ""
-"You need a PC connected to your dreambox. If you need further instructions, "
+"You need a PC connected to your receiver. If you need further instructions, "
 "please visit the website http://www.dm7025.de.\n"
-"Your dreambox will now be halted. After you have performed the update "
+"Your receiver will now be halted. After you have performed the update "
 "instructions from the website, your new firmware will ask you to restore "
 "your settings."
 msgstr ""
-"You need a PC connected to your dreambox. If you need further instructions, "
-"please visit the website http://www.dm7025.de.\n"
-"Your dreambox will now be halted. After you have performed the update "
-"instructions from the website, your new firmware will ask you to restore "
-"your settings."
 
 msgid ""
 "You need to set a PIN code and hide it from your children.\n"
@@ -7289,24 +7211,6 @@ msgstr ""
 
 #
 msgid ""
-"Your Dreambox is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Your Dreambox is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-
-#
-msgid "Your Dreambox will restart after pressing OK on your remote control."
-msgstr "Your Dreambox will restart after pressing OK on your remote control."
-
-#
-msgid ""
 "Your backup succeeded. We will now continue to explain the further upgrade "
 "process."
 msgstr ""
@@ -7324,18 +7228,6 @@ msgstr ""
 #
 msgid "Your current collection will get lost!"
 msgstr "Your current collection will get lost!"
-
-#
-msgid "Your dreambox is shutting down. Please stand by..."
-msgstr "Your dreambox is shutting down. Please stand by..."
-
-#
-msgid ""
-"Your dreambox isn't connected to the internet properly. Please check it and "
-"try again."
-msgstr ""
-"Your dreambox isn't connected to the internet properly. Please check it and "
-"try again."
 
 #
 msgid "Your email address:"
@@ -7371,10 +7263,29 @@ msgstr "Your name (optional):"
 msgid "Your network configuration has been activated."
 msgstr "Your network configuration has been activated."
 
+msgid ""
+"Your receiver is now ready to use.\n"
+"\n"
+"Your internet connection is working now.\n"
+"\n"
+"Please press OK to continue."
+msgstr ""
+
 msgid "Your receiver is rebooting"
 msgstr ""
 
 msgid "Your receiver is shutting down"
+msgstr ""
+
+msgid "Your receiver is shutting down. Please stand by..."
+msgstr ""
+
+msgid ""
+"Your receiver isn't connected to the internet properly. Please check it and "
+"try again."
+msgstr ""
+
+msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr ""
 
 #
@@ -8391,6 +8302,9 @@ msgstr "previous channel"
 msgid "previous channel in history"
 msgstr "previous channel in history"
 
+msgid "receiver software because updates are available."
+msgstr ""
+
 #
 msgid "record"
 msgstr "record"
@@ -8681,6 +8595,9 @@ msgstr "special characters"
 msgid "special events"
 msgstr ""
 
+msgid "special format data DVD (HDTV compatible)"
+msgstr ""
+
 msgid "sports (general)"
 msgstr ""
 
@@ -8912,13 +8829,10 @@ msgstr "yes"
 msgid "yes (keep feeds)"
 msgstr "yes (keep feeds)"
 
-#
 msgid ""
-"your dreambox might be unusable now. Please consult the manual for further "
-"assistance before rebooting your dreambox."
+"your receiver might be unusable now. Please consult the manual for further "
+"assistance before rebooting your receiver."
 msgstr ""
-"your dreambox might be unusable now. Please consult the manual for further "
-"assistance before rebooting your dreambox."
 
 #
 msgid "zap"
