--- a/po/et.po
+++ b/po/et.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-07-25 16:21+0200\n"
+"POT-Creation-Date: 2012-08-05 10:00+0200\n"
 "PO-Revision-Date: 2011-12-06 12:09+0300\n"
 "Last-Translator: Raivo, Henkka, eesatfan, rimas\n"
 "Language-Team: Raivo, Henkka, eesatfan, rimas\n"
@@ -30,10 +30,8 @@ msgstr ""
 
 msgid ""
 "\n"
-"Backup your Dreambox settings."
+"Backup your receiver settings."
 msgstr ""
-"\n"
-"Tee sätetest varukoopia."
 
 msgid ""
 "\n"
@@ -44,17 +42,13 @@ msgstr ""
 
 msgid ""
 "\n"
-"Manage extensions or plugins for your Dreambox"
+"Manage extensions or plugins for your receiver"
 msgstr ""
-"\n"
-"Halda oma vastuvõtja laiendusi"
 
 msgid ""
 "\n"
-"Online update of your Dreambox software."
+"Online update of your receiver software."
 msgstr ""
-"\n"
-"Uuenda vastuvõtja tarkvara."
 
 msgid ""
 "\n"
@@ -65,24 +59,20 @@ msgstr ""
 
 msgid ""
 "\n"
-"Restore your Dreambox settings."
-msgstr ""
-"\n"
-"Vastuvõtja sätete taastamine."
-
-msgid ""
-"\n"
-"Restore your Dreambox with a new firmware."
-msgstr ""
-"\n"
-"Taasta vastuvõtja uue tarkvaraga."
-
-msgid ""
-"\n"
 "Restore your backups by date."
 msgstr ""
 "\n"
 "Taasta oma varukoopiad kuupäeva alusel."
+
+msgid ""
+"\n"
+"Restore your receiver settings."
+msgstr ""
+
+msgid ""
+"\n"
+"Restore your receiver with a new firmware."
+msgstr ""
 
 msgid ""
 "\n"
@@ -148,6 +138,9 @@ msgstr ""
 msgid "%2d:%02d:%02d"
 msgstr ""
 
+msgid "%A %d %B"
+msgstr ""
+
 #. TRANSLATORS: long date representations dayname daynum monthname in strftime() format! See 'man strftime'
 msgid "%A %e %B"
 msgstr ""
@@ -200,6 +193,9 @@ msgstr[1] ""
 #, python-format
 msgid "%d services found!"
 msgstr "%d kanalit leitud!"
+
+msgid "%d-%m"
+msgstr ""
 
 msgid "%d.%B %Y"
 msgstr "%d.%B %Y"
@@ -346,17 +342,13 @@ msgstr "Demo laiendus TPM kasutamiseks."
 
 msgid ""
 "A finished record timer wants to set your\n"
-"Dreambox to standby. Do that now?"
+"receiver to standby. Do that now?"
 msgstr ""
-"Lõpetanud salvestuse timer soovib panna\n"
-"vastuvõtja standby-sse. Kas paneb?"
 
 msgid ""
 "A finished record timer wants to shut down\n"
-"your Dreambox. Shutdown now?"
+"your receiver. Shutdown now?"
 msgstr ""
-"Salvestuse lõpetanud timer soovib vastuvõtja\n"
-"välja lülitada. Kas lülitab?"
 
 msgid "A graphical EPG for all services of an specific bouquet"
 msgstr "Graafiline EPG kõigile kanalitele selles valikus"
@@ -412,17 +404,13 @@ msgstr ""
 
 msgid ""
 "A sleep timer wants to set your\n"
-"Dreambox to standby. Do that now?"
+"receiver to standby. Do that now?"
 msgstr ""
-"Unetimer soovib vastuvõtja panna\n"
-"standby-sse. Kas panna?"
 
 msgid ""
 "A sleep timer wants to shut down\n"
-"your Dreambox. Shutdown now?"
+"your receiver. Shutdown now?"
 msgstr ""
-"Unetimer soovib vastuvõtja välja\n"
-"lülitada. Kas lülitab?"
 
 msgid "A small overview of the available icon states and actions."
 msgstr "Kasutatavate ikoonide seisundite ja tegevuste lühiülevaade."
@@ -513,11 +501,9 @@ msgid "Add/Remove timer for current event"
 msgstr ""
 
 msgid ""
-"Adds enigma2 settings and dreambox model informations like SN, rev... if "
+"Adds enigma2 settings and receiver model informations like SN, rev... if "
 "enabled."
 msgstr ""
-"Lisab enigma2 seaded ja vastuvõtja mudeli info, nagu SN ... jne. kui on "
-"lubatud."
 
 msgid "Adds network configuration if enabled."
 msgstr "Lisab võrgu seadistuse, kui on lubatud."
@@ -568,10 +554,8 @@ msgstr ""
 
 msgid ""
 "After the start wizard is completed, you need to protect single services. "
-"Refer to your dreambox's manual on how to do that."
+"Refer to your receiver's manual on how to do that."
 msgstr ""
-"Kui alghäälestus on lõppenud, pead valima lapselukuga kanalid. Vaata "
-"juhendist, kuidas seda teha."
 
 msgid "Album"
 msgstr "Album"
@@ -1166,8 +1150,8 @@ msgstr "Teisenda ext3 > ext4"
 msgid "Copy"
 msgstr "Kopeeri"
 
-msgid "Could not connect to Dreambox .NFI Image Feed Server:"
-msgstr "Ei saa vastuvõtjaga ühendust .NFI tarkvara Server:"
+msgid "Could not connect to receiver .NFI Image Feed Server:"
+msgstr ""
 
 msgid "Could not load Medium! No disc inserted?"
 msgstr "Ei saa plaati avada! Pole plaati sisestatud?"
@@ -1197,10 +1181,8 @@ msgstr "Vealogi iselähetuse seaded"
 
 msgid ""
 "Crashlogs found!\n"
-"Send them to Dream Multimedia?"
+"Send them to the Image Developper?"
 msgstr ""
-"Leitud vealogi!\n"
-"Saadame Dream Multimeediasse?"
 
 msgid "Create DVD-ISO"
 msgstr "Loo DVD-ISO"
@@ -1232,6 +1214,9 @@ msgstr "Hetke transponder"
 
 msgid "Current device: "
 msgstr "Praegune seade: "
+
+msgid "Current event EPG"
+msgstr ""
 
 msgid "Current settings:"
 msgstr "Hetke sätted:"
@@ -1552,8 +1537,8 @@ msgstr "Kas soovid uut käsiotsingut teha?"
 msgid "Do you want to download the image to %s ?"
 msgstr "Kas soovid image alla laadida %s ?"
 
-msgid "Do you want to enable the parental control feature on your dreambox?"
-msgstr "Kas soovid oma vastuvõtjal lastelukku aktiveerida?"
+msgid "Do you want to enable the parental control feature on your receiver?"
+msgstr ""
 
 msgid "Do you want to install the package:\n"
 msgstr "Kas soovid paigaldada paketti:\n"
@@ -1564,8 +1549,8 @@ msgstr "Soovid panna DVD mängima?"
 msgid "Do you want to preview this DVD before burning?"
 msgstr "Soovid plaadi eelvaadet ka, enne kirjutamise alustamist?"
 
-msgid "Do you want to reboot your Dreambox?"
-msgstr "Soovid vastuvõtja uuesti käivitada?"
+msgid "Do you want to reboot your receiver?"
+msgstr ""
 
 msgid "Do you want to remove the package:\n"
 msgstr "Kas tahad kustutada paketti:\n"
@@ -1582,15 +1567,13 @@ msgid ""
 msgstr ""
 "Kas soovid saata ka oma emaili ja nime, et saaksime vajadusel ühendust võtta?"
 
-msgid "Do you want to update your Dreambox?"
-msgstr "Kas soovid vastuvõtja tarkvara uuendada?"
+msgid "Do you want to update your receiver?"
+msgstr ""
 
 msgid ""
-"Do you want to update your Dreambox?\n"
+"Do you want to update your receiver?\n"
 "After pressing OK, please wait!"
 msgstr ""
-"Kas soovid vastuvõtja tarkvara uuendada?\n"
-"Vajuta OK ja oota!"
 
 msgid "Do you want to upgrade the package:\n"
 msgstr "Kas soovid uuendada paketti:\n"
@@ -1639,12 +1622,6 @@ msgstr "Laetakse alla"
 
 msgid "Downloading plugin information. Please wait..."
 msgstr "Laeme alla laienduse infot. Palun oota."
-
-msgid "Dreambox format data DVD (HDTV compatible)"
-msgstr "Vastuvõtja vormingus data DVD-d"
-
-msgid "Dreambox software because updates are available."
-msgstr "vastuvõtja tarkvara, sest uuendused on saadaval."
 
 msgid "Dutch"
 msgstr "Hollandi"
@@ -1698,11 +1675,11 @@ msgstr "Muuda kanalite listi"
 msgid "Edit settings"
 msgstr "Muuda seadeid"
 
-msgid "Edit the Nameserver configuration of your Dreambox.\n"
-msgstr "Muuda nimeserveri seadeid.\n"
+msgid "Edit the Nameserver configuration of your receiver.\n"
+msgstr ""
 
-msgid "Edit the network configuration of your Dreambox.\n"
-msgstr "Muuda võrgu seadeid.\n"
+msgid "Edit the network configuration of your receiver.\n"
+msgstr ""
 
 msgid "Edit title"
 msgstr "Muuda pealkirja"
@@ -2119,7 +2096,7 @@ msgstr ""
 msgid "GotoX calibration"
 msgstr ""
 
-msgid "Graph MEpg Settings"
+msgid "GraphMultiEpg Settings"
 msgstr ""
 
 msgid "Graphical Multi EPG"
@@ -3019,8 +2996,8 @@ msgstr "Ei, alusta uuesti algusest"
 msgid "No, do nothing."
 msgstr "Ei, ära tee midagi."
 
-msgid "No, just start my dreambox"
-msgstr "Ei, käivita minu vastuvõtja"
+msgid "No, just start my receiver"
+msgstr ""
 
 msgid "No, never"
 msgstr "Ei, mitte kunagi"
@@ -3228,6 +3205,12 @@ msgstr "Telefoni number"
 msgid "PiPSetup"
 msgstr "PiP-pildi seaded"
 
+msgid "Picon"
+msgstr ""
+
+msgid "Picon and Service Name"
+msgstr ""
+
 msgid "PicturePlayer"
 msgstr "PildiMängija"
 
@@ -3358,6 +3341,9 @@ msgstr "Jätkamiseks vajuta OK ."
 
 msgid "Please press OK!"
 msgstr "Vajuta OK!"
+
+msgid "Please select a default EPG type..."
+msgstr ""
 
 msgid "Please select a playlist to delete..."
 msgstr "Vali kustutatav esitusloend"
@@ -4142,6 +4128,9 @@ msgstr "Vali salvestatav kanal"
 msgid "Select copy destination for:"
 msgstr ""
 
+msgid "Select default EPG type..."
+msgstr ""
+
 msgid "Select desired image from feed list"
 msgstr "Vali soovitud tarkvara feedide nimekirjast"
 
@@ -4208,11 +4197,17 @@ msgstr "Serbia"
 msgid "Service"
 msgstr "Kanaliinfo"
 
+msgid "Service Name"
+msgstr ""
+
 msgid "Service Scan"
 msgstr "Kanaliotsing"
 
 msgid "Service Searching"
 msgstr "Kanaliotsing"
+
+msgid "Service Title mode"
+msgstr ""
 
 msgid "Service has been added to the favourites."
 msgstr "Kanal on lisatud lemmiknimekirja."
@@ -4327,12 +4322,6 @@ msgstr "Näita infot"
 msgid "Show Message when Recording starts"
 msgstr "Teavita salvestuse algamisest"
 
-msgid "Show Picons"
-msgstr ""
-
-msgid "Show Service Names "
-msgstr ""
-
 msgid "Show WLAN Status"
 msgstr "Näita WiFi Olekut"
 
@@ -4393,8 +4382,8 @@ msgstr "Näitab WiFi olekut.\n"
 msgid "Shutdown"
 msgstr "Lülita välja"
 
-msgid "Shutdown Dreambox after"
-msgstr "Lülita välja peale"
+msgid "Shutdown receiver after"
+msgstr ""
 
 msgid "Side by Side"
 msgstr ""
@@ -4785,8 +4774,8 @@ msgstr "Testi tüüp"
 msgid "Test mode"
 msgstr "Testpilt"
 
-msgid "Test the network configuration of your Dreambox.\n"
-msgstr "Testi vastuvõtja kohtvõrgu seadeid.\n"
+msgid "Test the network configuration of your receiver.\n"
+msgstr ""
 
 msgid "Test-Messagebox?"
 msgstr "Testsõnum?"
@@ -4809,18 +4798,14 @@ msgstr ""
 
 msgid ""
 "Thank you for using the wizard. Your box is now ready to use.\n"
-"Please press OK to start using your Dreambox."
+"Please press OK to start using your receiver."
 msgstr ""
-"Tänan, vastuvõtja on nüüd valmis kasutuseks.\n"
-" Vastuvõtja kasutuse alustamiseks vajuta OK."
 
 msgid ""
 "The DVD standard doesn't support H.264 (HDTV) video streams. Do you want to "
-"create a Dreambox format data DVD (which will not play in stand-alone DVD "
+"create a special format data DVD (which will not play in stand-alone DVD "
 "players) instead?"
 msgstr ""
-"DVD standard ei toeta H.264 (HDTV) video voogesitust.Kas soovite luua "
-"Dreambox formaadis andmete (data) DVD, mida teised DVD mängijad ei mängi?"
 
 msgid ""
 "The NetworkWizard extension is not installed!\n"
@@ -4901,10 +4886,8 @@ msgstr "Vaikimisi saatjate nimekirja install lõpetatud."
 
 msgid ""
 "The installation of the default settings is finished. You can now continue "
-"configuring your Dreambox by pressing the OK button on the remote control."
+"configuring your receiver by pressing the OK button on the remote control."
 msgstr ""
-"Vaikimisi seadete paigaldamine on valmis. Saad jätkata seadete sisestamist "
-"oma vastuvõtjasse vajutades OK."
 
 msgid "The md5sum validation failed, the file may be corrupted!"
 msgstr "md5sum kontroll ebaõnnestus, fail võib olla rikutud!"
@@ -5012,29 +4995,18 @@ msgstr ""
 "DVD RW ketas on formaaditud.Uuesti formaatimisel kustutatakse kõik, mis "
 "plaadile kirjutatud."
 
-#, python-format
-msgid "This Dreambox can't decode %s streams!"
-msgstr "Vastuvõtja ei suuda dekodeerida %s video voogesitust!"
-
 msgid "This is step number 2."
 msgstr "See on 2. samm."
 
 msgid ""
 "This plugin creates a USB stick which can be used to update the firmware of "
-"your Dreambox without the need for a network or WLAN connection.\n"
+"your receiver without the need for a network or WLAN connection.\n"
 "First, a USB stick needs to be prepared so that it becomes bootable.\n"
 "In the next step, an NFI image file can be downloaded from the update server "
 "and saved on the USB stick.\n"
 "If you already have a prepared bootable USB stick, please insert it now. "
 "Otherwise plug in a USB stick with a minimum size of 64 MB!"
 msgstr ""
-"See laiendus valmistab ette USB pulga, mida saab kasutada vastuvõtja "
-"tarkvara uuendamiseks ilma võrgu- või WLAN ühenduseta. \n"
-"Algul tuleb USB pulk teha alglaetavaks. \n"
-"Siis saab uuenduste serverist alla laadida NFI tarkvara faili ja salvestada "
-"selle USB pulgale. \n"
-"Kui oled juba ette valmistanud alglaetava USB pulga, siis ühenda see nüüd. "
-"Vastasel korral ühenda min. 64 MB USB pulk!"
 
 msgid "This plugin is installed."
 msgstr "Laiendus on paigaldatud."
@@ -5047,6 +5019,10 @@ msgstr "See laiendus paigaldatakse."
 
 msgid "This plugin will be removed."
 msgstr "See laiendus eemaldatakse."
+
+#, python-format
+msgid "This receiver can't decode %s streams!"
+msgstr ""
 
 msgid ""
 "This test checks for configured Nameservers.\n"
@@ -5202,19 +5178,13 @@ msgid "To subtitle selection"
 msgstr "Subtiitrite valik"
 
 msgid ""
-"To update your Dreambox firmware, please follow these steps:\n"
+"To update your receiver firmware, please follow these steps:\n"
 "1) Turn off your box with the rear power switch and make sure the bootable "
 "USB stick is plugged in.\n"
 "2) Turn mains back on and hold the DOWN button on the front panel pressed "
 "for 10 seconds.\n"
 "3) Wait for bootup and follow instructions of the wizard."
 msgstr ""
-"Oma vastuvõtja tarkvara uuendamiseks toimi järgnevalt: \n"
-"1) Lülita vastuvõtja tagumisest lülitist välja ja veendu, et alglaaditav USB "
-"pulk on ühendatud. \n"
-"2) Lülita vastuvõtja sisse, hoides DOWN nuppu esipaneelil vajutatuna 10 "
-"sekundi jooksul. \n"
-"3) Oota alglaadimiseni ja jälgi abilise juhendeid ekraanil."
 
 msgid "Today"
 msgstr "Täna"
@@ -5405,14 +5375,14 @@ msgstr "Uuenda ja küsi luba taaskäivitamiseks"
 msgid "Upgrade finished."
 msgstr "Uuendus valmis."
 
-msgid "Upgrade finished. Do you want to reboot your Dreambox?"
+msgid "Upgrade finished. Do you want to reboot your receiver?"
 msgstr ""
 
 msgid "Upgrading"
 msgstr "Uuendan"
 
-msgid "Upgrading Dreambox... Please wait"
-msgstr "Uuendan vastuvõtja tarkvara... Oota"
+msgid "Upgrading receiver... Please wait"
+msgstr ""
 
 msgid "Use"
 msgstr "Kasuta"
@@ -5725,51 +5695,34 @@ msgstr ""
 
 msgid ""
 "Welcome to the Image upgrade wizard. The wizard will assist you in upgrading "
-"the firmware of your Dreambox by providing a backup facility for your "
+"the firmware of your receiver by providing a backup facility for your "
 "current settings and a short explanation of how to upgrade your firmware."
 msgstr ""
-"Tere tulemast tarkvara uuendamise seadistusabilisse. Seadistusabiline aitab "
-"sind seadete varundamisel ja tarkvara uuendamisel."
 
 msgid ""
 "Welcome to the cleanup wizard.\n"
 "\n"
 "We have detected that your available internal memory has dropped below 2MB.\n"
-"To ensure stable operation of your Dreambox, the internal memory should be "
+"To ensure stable operation of your receiver, the internal memory should be "
 "cleaned up.\n"
 "You can use this wizard to remove some extensions.\n"
 msgstr ""
-"Tere tulemast mälupuhastaja abilisse.\n"
-"\n"
-"Vastuvõtjas kasutatav vaba sisemälu maht on langenud alla 2 MB.\n"
-"Oma vastuvõtja stabiilse töö kindlustamiseks oleks vaja sisemälupuhastada.\n"
-"Saad kasutada seda puhastusabilist mõnede laienduste eemaldamiseks.\n"
 
 msgid ""
 "Welcome.\n"
 "\n"
-"If you want to connect your Dreambox to the Internet, this wizard will guide "
-"you through the basic network setup of your Dreambox.\n"
+"If you want to connect your receiver to the Internet, this wizard will guide "
+"you through the basic network setup of your receiver.\n"
 "\n"
 "Press OK to start configuring your network"
 msgstr ""
-"Tere.\n"
-"\n"
-"Kui soovid ühendada oma vastuvõtja internetti, siis see abiline juhendab "
-"vastuvõtja võrgu seadistamisel.\n"
-"\n"
-"Võrgu seadistamise alustamiseks vajuta OK"
 
 msgid ""
 "Welcome.\n"
 "\n"
-"This start wizard will guide you through the basic setup of your Dreambox.\n"
+"This start wizard will guide you through the basic setup of your receiver.\n"
 "Press the OK button on your remote control to move to the next step."
 msgstr ""
-"Tere.\n"
-"\n"
-"See stardiabiline juhendab vastuvõtja põhiseadete tegemisel.\n"
-"Vajuta puldil OK nuppu järgmise sammu juurde minekuks."
 
 msgid "Welcome..."
 msgstr "Tere tulemast"
@@ -5910,8 +5863,8 @@ msgstr "Samal ajal võib vaatata TV-d jne."
 msgid "You can install this plugin."
 msgstr "Selle laienduse saab paigaldada."
 
-msgid "You can only burn Dreambox recordings!"
-msgstr "Plaadile saab kirjutada ainult vastuvõtja salvestusi!"
+msgid "You can only burn receiver recordings!"
+msgstr ""
 
 msgid "You can remove this plugin."
 msgstr "Selle laienduse saab eemaldada."
@@ -5961,16 +5914,12 @@ msgid "You have to wait %s!"
 msgstr "Tuleb oodata %s!"
 
 msgid ""
-"You need a PC connected to your dreambox. If you need further instructions, "
+"You need a PC connected to your receiver. If you need further instructions, "
 "please visit the website http://www.dm7025.de.\n"
-"Your dreambox will now be halted. After you have performed the update "
+"Your receiver will now be halted. After you have performed the update "
 "instructions from the website, your new firmware will ask you to restore "
 "your settings."
 msgstr ""
-"Vastuvõtja tuleb ühendada arvutiga. Kui on vaja abi, siis palun vaata : "
-"http://www.dm7025.de.\n"
-"Vastuvõtja peatatakse. Kui on täidetud uuendamise juhised veebilehelt, siis "
-"uus tarkvara palub taastada seadeid."
 
 msgid ""
 "You need to set a PIN code and hide it from your children.\n"
@@ -5996,22 +5945,6 @@ msgstr ""
 "\n"
 
 msgid ""
-"Your Dreambox is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Vastuvõtja on kasutamiseks valmis.\n"
-"\n"
-"Interneti ühendus töötab.\n"
-"\n"
-" Jätkamiseks vajuta OK."
-
-msgid "Your Dreambox will restart after pressing OK on your remote control."
-msgstr "Vastuvõtja taaskäivitub pärast puldilt OK vajutamist."
-
-msgid ""
 "Your backup succeeded. We will now continue to explain the further upgrade "
 "process."
 msgstr "Varukoopia valmis. Me informeerime edasistest uuenduste käigust."
@@ -6025,14 +5958,6 @@ msgstr ""
 
 msgid "Your current collection will get lost!"
 msgstr "Praegune valik kustutatakse!"
-
-msgid "Your dreambox is shutting down. Please stand by..."
-msgstr "Lülitan välja. Palun oota."
-
-msgid ""
-"Your dreambox isn't connected to the internet properly. Please check it and "
-"try again."
-msgstr "Internetiühendust pole. Kontrolli võrgu seadeid ja ürita uuesti."
 
 msgid "Your email address:"
 msgstr "Emaili aadress:"
@@ -6063,10 +5988,29 @@ msgstr "Nimi (soovi korral):"
 msgid "Your network configuration has been activated."
 msgstr "Võrguseadistus on aktiveeritud."
 
+msgid ""
+"Your receiver is now ready to use.\n"
+"\n"
+"Your internet connection is working now.\n"
+"\n"
+"Please press OK to continue."
+msgstr ""
+
 msgid "Your receiver is rebooting"
 msgstr ""
 
 msgid "Your receiver is shutting down"
+msgstr ""
+
+msgid "Your receiver is shutting down. Please stand by..."
+msgstr ""
+
+msgid ""
+"Your receiver isn't connected to the internet properly. Please check it and "
+"try again."
+msgstr ""
+
+msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr ""
 
 msgid ""
@@ -6903,6 +6847,9 @@ msgstr "eelmine kanal"
 msgid "previous channel in history"
 msgstr "eelmine kanal ajaloos"
 
+msgid "receiver software because updates are available."
+msgstr ""
+
 msgid "record"
 msgstr "salvestus"
 
@@ -7138,6 +7085,9 @@ msgstr "erimärgid"
 msgid "special events"
 msgstr ""
 
+msgid "special format data DVD (HDTV compatible)"
+msgstr ""
+
 msgid "sports (general)"
 msgstr ""
 
@@ -7328,11 +7278,9 @@ msgid "yes (keep feeds)"
 msgstr "jah (hoia feedid)"
 
 msgid ""
-"your dreambox might be unusable now. Please consult the manual for further "
-"assistance before rebooting your dreambox."
+"your receiver might be unusable now. Please consult the manual for further "
+"assistance before rebooting your receiver."
 msgstr ""
-"teie vastuvõtja võib olla nüüd kasutuskõlbmatu. Uuri juhendit täiendava abi "
-"leidmiseks enne vastuvõtja taaskäivitaimist."
 
 msgid "zap"
 msgstr "kanalivahetus"
