--- a/po/ro.po
+++ b/po/ro.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-07-25 16:21+0200\n"
+"POT-Creation-Date: 2012-08-05 10:00+0200\n"
 "PO-Revision-Date: 2010-03-09 21:03+0100\n"
 "Last-Translator: \n"
 "Language-Team: HDTV ROMANIA(superonic,costel_mbc,neutrin,otheitis,cipy_1982,"
@@ -34,10 +34,8 @@ msgstr ""
 
 msgid ""
 "\n"
-"Backup your Dreambox settings."
+"Backup your receiver settings."
 msgstr ""
-"\n"
-"Faceti backup setarile Ipbox."
 
 msgid ""
 "\n"
@@ -48,15 +46,13 @@ msgstr ""
 
 msgid ""
 "\n"
-"Manage extensions or plugins for your Dreambox"
+"Manage extensions or plugins for your receiver"
 msgstr ""
 
 msgid ""
 "\n"
-"Online update of your Dreambox software."
+"Online update of your receiver software."
 msgstr ""
-"\n"
-"Online actualizare a software-ului Ipbox."
 
 msgid ""
 "\n"
@@ -67,24 +63,20 @@ msgstr ""
 
 msgid ""
 "\n"
-"Restore your Dreambox settings."
-msgstr ""
-"\n"
-"Restaurare setari Ipbox."
-
-msgid ""
-"\n"
-"Restore your Dreambox with a new firmware."
-msgstr ""
-"\n"
-"Restaurare Ipbox cu un nou firmware."
-
-msgid ""
-"\n"
 "Restore your backups by date."
 msgstr ""
 "\n"
 "Restaurare backups dupa data."
+
+msgid ""
+"\n"
+"Restore your receiver settings."
+msgstr ""
+
+msgid ""
+"\n"
+"Restore your receiver with a new firmware."
+msgstr ""
 
 msgid ""
 "\n"
@@ -146,6 +138,9 @@ msgstr ""
 msgid "%2d:%02d:%02d"
 msgstr ""
 
+msgid "%A %d %B"
+msgstr ""
+
 #. TRANSLATORS: long date representations dayname daynum monthname in strftime() format! See 'man strftime'
 msgid "%A %e %B"
 msgstr ""
@@ -198,6 +193,9 @@ msgstr[1] ""
 #, python-format
 msgid "%d services found!"
 msgstr "%d servicii gasite!"
+
+msgid "%d-%m"
+msgstr ""
 
 msgid "%d.%B %Y"
 msgstr ""
@@ -345,15 +343,13 @@ msgstr ""
 
 msgid ""
 "A finished record timer wants to set your\n"
-"Dreambox to standby. Do that now?"
+"receiver to standby. Do that now?"
 msgstr ""
-"Un timer care a terminat vrea sa pune\n"
-"Ipbox la standby.Il facem acuma?"
 
 msgid ""
 "A finished record timer wants to shut down\n"
-"your Dreambox. Shutdown now?"
-msgstr "Un timer care a terminat vrea sa face shut down ?"
+"your receiver. Shutdown now?"
+msgstr ""
 
 msgid "A graphical EPG for all services of an specific bouquet"
 msgstr "Un EPG cu grafice pt toate servicii de la un buchet"
@@ -407,17 +403,13 @@ msgstr ""
 
 msgid ""
 "A sleep timer wants to set your\n"
-"Dreambox to standby. Do that now?"
+"receiver to standby. Do that now?"
 msgstr ""
-"Un sleep timer vrea sa seteze\n"
-"Ipbox la standby.Il fac asta acuma?"
 
 msgid ""
 "A sleep timer wants to shut down\n"
-"your Dreambox. Shutdown now?"
+"your receiver. Shutdown now?"
 msgstr ""
-"Un sleep timer vrea sa face shut down\n"
-"Ipbox.Inchidere acuma?"
 
 msgid "A small overview of the available icon states and actions."
 msgstr ""
@@ -508,7 +500,7 @@ msgid "Add/Remove timer for current event"
 msgstr ""
 
 msgid ""
-"Adds enigma2 settings and dreambox model informations like SN, rev... if "
+"Adds enigma2 settings and receiver model informations like SN, rev... if "
 "enabled."
 msgstr ""
 
@@ -561,10 +553,8 @@ msgstr ""
 
 msgid ""
 "After the start wizard is completed, you need to protect single services. "
-"Refer to your dreambox's manual on how to do that."
+"Refer to your receiver's manual on how to do that."
 msgstr ""
-"Dupa completare start wizard,trebuie sa ptotejezi serviciile unice. Cisteste "
-"pe manual lui Ipbox cum sa faci asta."
 
 msgid "Album"
 msgstr "Album"
@@ -1159,8 +1149,8 @@ msgstr ""
 msgid "Copy"
 msgstr ""
 
-msgid "Could not connect to Dreambox .NFI Image Feed Server:"
-msgstr "Conexiunea la Dreambox a esuat .NFI server de imagini:"
+msgid "Could not connect to receiver .NFI Image Feed Server:"
+msgstr ""
 
 msgid "Could not load Medium! No disc inserted?"
 msgstr "Nu s-a putut incarca! E vreun disc introdus?"
@@ -1191,7 +1181,7 @@ msgstr ""
 
 msgid ""
 "Crashlogs found!\n"
-"Send them to Dream Multimedia?"
+"Send them to the Image Developper?"
 msgstr ""
 
 msgid "Create DVD-ISO"
@@ -1223,6 +1213,9 @@ msgid "Current Transponder"
 msgstr "Transponderul curent"
 
 msgid "Current device: "
+msgstr ""
+
+msgid "Current event EPG"
 msgstr ""
 
 msgid "Current settings:"
@@ -1544,8 +1537,8 @@ msgstr "Doriti efectuarea unei alte operatiuni de scanare manuala?"
 msgid "Do you want to download the image to %s ?"
 msgstr ""
 
-msgid "Do you want to enable the parental control feature on your dreambox?"
-msgstr "Doriti activarea controlului parental?"
+msgid "Do you want to enable the parental control feature on your receiver?"
+msgstr ""
 
 msgid "Do you want to install the package:\n"
 msgstr "Doriti sa instalati pachetul:\n"
@@ -1556,8 +1549,8 @@ msgstr "Doriti redarea DVD-ului introdus?"
 msgid "Do you want to preview this DVD before burning?"
 msgstr "Doriti sa previzualizati acest DVD inainte de a fi scris?"
 
-msgid "Do you want to reboot your Dreambox?"
-msgstr "Doriti sa reporniti Dreamboxul dvs?"
+msgid "Do you want to reboot your receiver?"
+msgstr ""
 
 msgid "Do you want to remove the package:\n"
 msgstr "Doriti sa stergeti pachetul:\n"
@@ -1573,15 +1566,13 @@ msgid ""
 "if needed?"
 msgstr ""
 
-msgid "Do you want to update your Dreambox?"
-msgstr "Doriti sa actualizati Dreamboxul dvs?"
+msgid "Do you want to update your receiver?"
+msgstr ""
 
 msgid ""
-"Do you want to update your Dreambox?\n"
+"Do you want to update your receiver?\n"
 "After pressing OK, please wait!"
 msgstr ""
-"Doriti sa actualizati IPBOX dvs?\n"
-"Va rog sa asteptati dupa ce apasati OK!"
 
 msgid "Do you want to upgrade the package:\n"
 msgstr "Doriti actualizarea pachetului:\n"
@@ -1631,12 +1622,6 @@ msgstr "Se descarca"
 
 msgid "Downloading plugin information. Please wait..."
 msgstr "Se descarca informatiile Pluginului. Va rog sa asteptati..."
-
-msgid "Dreambox format data DVD (HDTV compatible)"
-msgstr "DVD format Dreambox (compatibil HDTV)"
-
-msgid "Dreambox software because updates are available."
-msgstr ""
 
 msgid "Dutch"
 msgstr "Olandeza"
@@ -1690,11 +1675,11 @@ msgstr "Editare lista de servicii"
 msgid "Edit settings"
 msgstr "Editare setari"
 
-msgid "Edit the Nameserver configuration of your Dreambox.\n"
-msgstr "Editati configuratia Nameserver al Dreamboxului dvs.\n"
+msgid "Edit the Nameserver configuration of your receiver.\n"
+msgstr ""
 
-msgid "Edit the network configuration of your Dreambox.\n"
-msgstr "Editati setarile de retea ale Dreaboxului dvs.\n"
+msgid "Edit the network configuration of your receiver.\n"
+msgstr ""
 
 msgid "Edit title"
 msgstr "Editare titlu"
@@ -2105,7 +2090,7 @@ msgstr ""
 msgid "GotoX calibration"
 msgstr ""
 
-msgid "Graph MEpg Settings"
+msgid "GraphMultiEpg Settings"
 msgstr ""
 
 msgid "Graphical Multi EPG"
@@ -3000,8 +2985,8 @@ msgstr "Nu, dar reluati de la capat"
 msgid "No, do nothing."
 msgstr "Nu, nu face nimic."
 
-msgid "No, just start my dreambox"
-msgstr "Nu, doar porneste dreambox"
+msgid "No, just start my receiver"
+msgstr ""
 
 msgid "No, never"
 msgstr ""
@@ -3210,6 +3195,12 @@ msgstr ""
 msgid "PiPSetup"
 msgstr "Configurare PiP"
 
+msgid "Picon"
+msgstr ""
+
+msgid "Picon and Service Name"
+msgstr ""
+
 msgid "PicturePlayer"
 msgstr "PicturePlayer"
 
@@ -3339,6 +3330,9 @@ msgstr "Va rugam apasati OK pentru a continua"
 
 msgid "Please press OK!"
 msgstr "Va rugam apasati OK!"
+
+msgid "Please select a default EPG type..."
+msgstr ""
 
 msgid "Please select a playlist to delete..."
 msgstr "Va rugam selectati o lista de redare pentru a fi stearsa..."
@@ -4116,6 +4110,9 @@ msgstr "Selectare canal de inregistrat"
 msgid "Select copy destination for:"
 msgstr ""
 
+msgid "Select default EPG type..."
+msgstr ""
+
 msgid "Select desired image from feed list"
 msgstr ""
 
@@ -4182,11 +4179,17 @@ msgstr ""
 msgid "Service"
 msgstr "Serviciu"
 
+msgid "Service Name"
+msgstr ""
+
 msgid "Service Scan"
 msgstr "Scanare Serviciu"
 
 msgid "Service Searching"
 msgstr "Cautare Serviciu"
+
+msgid "Service Title mode"
+msgstr ""
 
 msgid "Service has been added to the favourites."
 msgstr "Serviciul a fost adaugat la favorite"
@@ -4299,12 +4302,6 @@ msgstr "Arata Informatii"
 msgid "Show Message when Recording starts"
 msgstr ""
 
-msgid "Show Picons"
-msgstr ""
-
-msgid "Show Service Names "
-msgstr ""
-
 msgid "Show WLAN Status"
 msgstr "Arata stare WLAN"
 
@@ -4365,8 +4362,8 @@ msgstr "Arata statusul conexiunii LAN wireless.\n"
 msgid "Shutdown"
 msgstr ""
 
-msgid "Shutdown Dreambox after"
-msgstr "Inchide Dreambox dupa"
+msgid "Shutdown receiver after"
+msgstr ""
 
 msgid "Side by Side"
 msgstr ""
@@ -4760,8 +4757,8 @@ msgstr "Tipul de test"
 msgid "Test mode"
 msgstr "Mod de testare"
 
-msgid "Test the network configuration of your Dreambox.\n"
-msgstr "Testati configurarile de retea ale Dreambox-ului.\n"
+msgid "Test the network configuration of your receiver.\n"
+msgstr ""
 
 msgid "Test-Messagebox?"
 msgstr "Test-Messagebox?"
@@ -4782,20 +4779,14 @@ msgstr ""
 
 msgid ""
 "Thank you for using the wizard. Your box is now ready to use.\n"
-"Please press OK to start using your Dreambox."
+"Please press OK to start using your receiver."
 msgstr ""
-"Va multumim ca ati folosit acest wizard. Receptorul este gata de "
-"functionare.\n"
-"Va rugam apasati OK pentru a porni IPBOX."
 
 msgid ""
 "The DVD standard doesn't support H.264 (HDTV) video streams. Do you want to "
-"create a Dreambox format data DVD (which will not play in stand-alone DVD "
+"create a special format data DVD (which will not play in stand-alone DVD "
 "players) instead?"
 msgstr ""
-"Standardul DVD nu suporta formatul video H.264 (HDTV). Doriti sacreati un "
-"DVD in format IPBOX (Care nu va putea fi vizionat intr-un DVD player "
-"obisnuit)?"
 
 msgid ""
 "The NetworkWizard extension is not installed!\n"
@@ -4871,10 +4862,8 @@ msgstr "Instalarea serviciilor implicite este incheiata."
 
 msgid ""
 "The installation of the default settings is finished. You can now continue "
-"configuring your Dreambox by pressing the OK button on the remote control."
+"configuring your receiver by pressing the OK button on the remote control."
 msgstr ""
-"Instalarea setarilor implicite este incheiata. Acum puteti continuasa "
-"configurati Dreambox apasand tasta OK de pe telecomanda."
 
 msgid "The md5sum validation failed, the file may be corrupted!"
 msgstr ""
@@ -4980,16 +4969,12 @@ msgstr ""
 "Acest DVD RW este deja formatat - reformatarea presupune stergerea "
 "tuturorfisierelor de pe disc."
 
-#, python-format
-msgid "This Dreambox can't decode %s streams!"
-msgstr "Acest Dreambox nu poate decoda streamurile %s!"
-
 msgid "This is step number 2."
 msgstr "Acesta este pasul numarul 2"
 
 msgid ""
 "This plugin creates a USB stick which can be used to update the firmware of "
-"your Dreambox without the need for a network or WLAN connection.\n"
+"your receiver without the need for a network or WLAN connection.\n"
 "First, a USB stick needs to be prepared so that it becomes bootable.\n"
 "In the next step, an NFI image file can be downloaded from the update server "
 "and saved on the USB stick.\n"
@@ -5007,6 +4992,10 @@ msgid "This plugin will be installed."
 msgstr ""
 
 msgid "This plugin will be removed."
+msgstr ""
+
+#, python-format
+msgid "This receiver can't decode %s streams!"
 msgstr ""
 
 msgid ""
@@ -5163,7 +5152,7 @@ msgid "To subtitle selection"
 msgstr ""
 
 msgid ""
-"To update your Dreambox firmware, please follow these steps:\n"
+"To update your receiver firmware, please follow these steps:\n"
 "1) Turn off your box with the rear power switch and make sure the bootable "
 "USB stick is plugged in.\n"
 "2) Turn mains back on and hold the DOWN button on the front panel pressed "
@@ -5359,14 +5348,14 @@ msgstr ""
 msgid "Upgrade finished."
 msgstr "Upgrate terminat."
 
-msgid "Upgrade finished. Do you want to reboot your Dreambox?"
-msgstr "Upgrade terminat. Vrei sa restartezu Dreamboxul tau?"
+msgid "Upgrade finished. Do you want to reboot your receiver?"
+msgstr ""
 
 msgid "Upgrading"
 msgstr "Upgradare"
 
-msgid "Upgrading Dreambox... Please wait"
-msgstr "pgradare DreamBox... Te rugam asteapta"
+msgid "Upgrading receiver... Please wait"
+msgstr ""
 
 msgid "Use"
 msgstr "Foloseste"
@@ -5681,18 +5670,15 @@ msgstr ""
 
 msgid ""
 "Welcome to the Image upgrade wizard. The wizard will assist you in upgrading "
-"the firmware of your Dreambox by providing a backup facility for your "
+"the firmware of your receiver by providing a backup facility for your "
 "current settings and a short explanation of how to upgrade your firmware."
 msgstr ""
-"Bine ai venit la expertul de upgradare Imagine. Expertul va asista la "
-"upgradarea firmware-lui Boxului tau prin promovarea facilitatii de a salva "
-"setarile curente si o scurta explicatie cum sa faci upgrade la box."
 
 msgid ""
 "Welcome to the cleanup wizard.\n"
 "\n"
 "We have detected that your available internal memory has dropped below 2MB.\n"
-"To ensure stable operation of your Dreambox, the internal memory should be "
+"To ensure stable operation of your receiver, the internal memory should be "
 "cleaned up.\n"
 "You can use this wizard to remove some extensions.\n"
 msgstr ""
@@ -5700,8 +5686,8 @@ msgstr ""
 msgid ""
 "Welcome.\n"
 "\n"
-"If you want to connect your Dreambox to the Internet, this wizard will guide "
-"you through the basic network setup of your Dreambox.\n"
+"If you want to connect your receiver to the Internet, this wizard will guide "
+"you through the basic network setup of your receiver.\n"
 "\n"
 "Press OK to start configuring your network"
 msgstr ""
@@ -5709,13 +5695,9 @@ msgstr ""
 msgid ""
 "Welcome.\n"
 "\n"
-"This start wizard will guide you through the basic setup of your Dreambox.\n"
+"This start wizard will guide you through the basic setup of your receiver.\n"
 "Press the OK button on your remote control to move to the next step."
 msgstr ""
-"Bine ai venit.\n"
-"\n"
-"Acest expert de configurare te va ghida prin setarile de baza ale Boxului.\n"
-"Apasa butonu OK de la telecomanda pentru a merge mai departe."
 
 msgid "Welcome..."
 msgstr "Bine ai venit..."
@@ -5856,7 +5838,7 @@ msgstr ""
 msgid "You can install this plugin."
 msgstr ""
 
-msgid "You can only burn Dreambox recordings!"
+msgid "You can only burn receiver recordings!"
 msgstr ""
 
 msgid "You can remove this plugin."
@@ -5909,16 +5891,12 @@ msgid "You have to wait %s!"
 msgstr "Ai de asteptat %s!"
 
 msgid ""
-"You need a PC connected to your dreambox. If you need further instructions, "
+"You need a PC connected to your receiver. If you need further instructions, "
 "please visit the website http://www.dm7025.de.\n"
-"Your dreambox will now be halted. After you have performed the update "
+"Your receiver will now be halted. After you have performed the update "
 "instructions from the website, your new firmware will ask you to restore "
 "your settings."
 msgstr ""
-"Trebuie sa ai un PC conectat la Ipbox. Daca ai nevoie de instructiuni "
-"suplimentare,acceseaza site-ul http://www.dm7025.de.\n"
-"IPBOXul va fi oprit. Dupa ce ai facut updatedupa instructiunile de pe "
-"website, noul firmware va cere un restorela setari."
 
 msgid ""
 "You need to set a PIN code and hide it from your children.\n"
@@ -5937,17 +5915,6 @@ msgid ""
 msgstr ""
 
 msgid ""
-"Your Dreambox is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-
-msgid "Your Dreambox will restart after pressing OK on your remote control."
-msgstr "Dreamboxul se va restarta dupa ce apesi Ok pe telecomanda."
-
-msgid ""
 "Your backup succeeded. We will now continue to explain the further upgrade "
 "process."
 msgstr ""
@@ -5962,14 +5929,6 @@ msgstr ""
 
 msgid "Your current collection will get lost!"
 msgstr ""
-
-msgid "Your dreambox is shutting down. Please stand by..."
-msgstr "Dreamboxul este in curs de stingere. Asteapta..."
-
-msgid ""
-"Your dreambox isn't connected to the internet properly. Please check it and "
-"try again."
-msgstr "Dreamboxul nu este conectat la internet. Verifica si incearca din nou."
 
 msgid "Your email address:"
 msgstr ""
@@ -5998,10 +5957,29 @@ msgstr ""
 msgid "Your network configuration has been activated."
 msgstr "Configurarea retelei a fost activata."
 
+msgid ""
+"Your receiver is now ready to use.\n"
+"\n"
+"Your internet connection is working now.\n"
+"\n"
+"Please press OK to continue."
+msgstr ""
+
 msgid "Your receiver is rebooting"
 msgstr ""
 
 msgid "Your receiver is shutting down"
+msgstr ""
+
+msgid "Your receiver is shutting down. Please stand by..."
+msgstr ""
+
+msgid ""
+"Your receiver isn't connected to the internet properly. Please check it and "
+"try again."
+msgstr ""
+
+msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr ""
 
 msgid ""
@@ -6838,6 +6816,9 @@ msgstr "canalul anterior"
 msgid "previous channel in history"
 msgstr "canalul anterior din istoric"
 
+msgid "receiver software because updates are available."
+msgstr ""
+
 msgid "record"
 msgstr "inregistrare"
 
@@ -7073,6 +7054,9 @@ msgstr ""
 msgid "special events"
 msgstr ""
 
+msgid "special format data DVD (HDTV compatible)"
+msgstr ""
+
 msgid "sports (general)"
 msgstr ""
 
@@ -7263,11 +7247,9 @@ msgid "yes (keep feeds)"
 msgstr "da (pastreaza feed-uri)"
 
 msgid ""
-"your dreambox might be unusable now. Please consult the manual for further "
-"assistance before rebooting your dreambox."
+"your receiver might be unusable now. Please consult the manual for further "
+"assistance before rebooting your receiver."
 msgstr ""
-"dreamboxul poate fi inutilizabil acum. Te rog sa consulti manualul pentru "
-"asistenta inainte de reboot la dreambox."
 
 msgid "zap"
 msgstr "zap"
