--- a/po/he.po
+++ b/po/he.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-07-25 16:21+0200\n"
+"POT-Creation-Date: 2012-08-05 10:00+0200\n"
 "PO-Revision-Date: 2012-03-08 10:40+0330\n"
 "Last-Translator: \n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -37,10 +37,8 @@ msgstr ""
 
 msgid ""
 "\n"
-"Backup your Dreambox settings."
+"Backup your receiver settings."
 msgstr ""
-"\n"
-"גבה את הגדרות הדרימבוקס"
 
 #
 msgid ""
@@ -50,20 +48,15 @@ msgstr ""
 "\n"
 "ערוך את כתובת מקור העדכון"
 
-#
 msgid ""
 "\n"
-"Manage extensions or plugins for your Dreambox"
+"Manage extensions or plugins for your receiver"
 msgstr ""
-"\n"
-"נהל תוספות או פלאגינים לדרימבוקס"
 
 msgid ""
 "\n"
-"Online update of your Dreambox software."
+"Online update of your receiver software."
 msgstr ""
-"\n"
-"עדכונים מהאינטרנט לדרימבוקס שלך"
 
 #
 msgid ""
@@ -76,26 +69,20 @@ msgstr ""
 #
 msgid ""
 "\n"
-"Restore your Dreambox settings."
-msgstr ""
-"\n"
-"שיחזור הגדרות הדרימבוקס שלך"
-
-#
-msgid ""
-"\n"
-"Restore your Dreambox with a new firmware."
-msgstr ""
-"\n"
-"שיחזור הדרימבוקס עם גרסת קושחה חדשה"
-
-#
-msgid ""
-"\n"
 "Restore your backups by date."
 msgstr ""
 "\n"
 "שיחזור גיבויים לפי תאריך"
+
+msgid ""
+"\n"
+"Restore your receiver settings."
+msgstr ""
+
+msgid ""
+"\n"
+"Restore your receiver with a new firmware."
+msgstr ""
 
 #
 msgid ""
@@ -165,6 +152,9 @@ msgstr ""
 msgid "%2d:%02d:%02d"
 msgstr ""
 
+msgid "%A %d %B"
+msgstr ""
+
 #. TRANSLATORS: long date representations dayname daynum monthname in strftime() format! See 'man strftime'
 msgid "%A %e %B"
 msgstr ""
@@ -220,6 +210,9 @@ msgstr[1] ""
 #, python-format
 msgid "%d services found!"
 msgstr "!שירותים נמצאו %d"
+
+msgid "%d-%m"
+msgstr ""
 
 msgid "%d.%B %Y"
 msgstr "%d.%B %Y"
@@ -379,17 +372,13 @@ msgstr "A demo plugin for TPM usage."
 
 msgid ""
 "A finished record timer wants to set your\n"
-"Dreambox to standby. Do that now?"
+"receiver to standby. Do that now?"
 msgstr ""
-"הקלטת טיימר שהסתיימה מעוניינת להעביר \n"
-"? את הדרימבוקס לסטנדביי, לעשות זאת עכשיו"
 
 msgid ""
 "A finished record timer wants to shut down\n"
-"your Dreambox. Shutdown now?"
+"your receiver. Shutdown now?"
 msgstr ""
-"הקלטת טיימר שהסתיימה מעוניינת לכבות \n"
-"? את הדרימבוקס, לכבות עכשיו"
 
 msgid "A graphical EPG for all services of an specific bouquet"
 msgstr "תצוגה גראפית לאי.פי.גי לכל התחנות בתיקייה ספציפית"
@@ -441,21 +430,15 @@ msgstr ""
 "\n"
 "האם ברצונך להשבית את הממשק השני"
 
-#
 msgid ""
 "A sleep timer wants to set your\n"
-"Dreambox to standby. Do that now?"
+"receiver to standby. Do that now?"
 msgstr ""
-"טיימר למצב שינה מעוניין להעביר את\n"
-"?הדרימבוקס למצב המתנה. מעוניין"
 
-#
 msgid ""
 "A sleep timer wants to shut down\n"
-"your Dreambox. Shutdown now?"
+"your receiver. Shutdown now?"
 msgstr ""
-"טיימר למצב שינה מעוניין לכבות את\n"
-"?הדרימבוקס. מעוניין"
 
 #
 msgid "A small overview of the available icon states and actions."
@@ -569,11 +552,10 @@ msgstr "הוסף למועדפים"
 msgid "Add/Remove timer for current event"
 msgstr ""
 
-#
 msgid ""
-"Adds enigma2 settings and dreambox model informations like SN, rev... if "
+"Adds enigma2 settings and receiver model informations like SN, rev... if "
 "enabled."
-msgstr "מוסיף הגדרות לאניגמה2 ומודל הדרימבוקס כגון סיריאל, במידה ומאופשר"
+msgstr ""
 
 #
 msgid "Adds network configuration if enabled."
@@ -632,10 +614,8 @@ msgstr ""
 
 msgid ""
 "After the start wizard is completed, you need to protect single services. "
-"Refer to your dreambox's manual on how to do that."
+"Refer to your receiver's manual on how to do that."
 msgstr ""
-"After the start wizard is completed, you need to protect single services. "
-"Refer to your dreambox's manual on how to do that."
 
 #
 msgid "Album"
@@ -1284,9 +1264,8 @@ msgstr ""
 msgid "Copy"
 msgstr ""
 
-#
-msgid "Could not connect to Dreambox .NFI Image Feed Server:"
-msgstr "Could not connect to Dreambox .NFI Image Feed Server:"
+msgid "Could not connect to receiver .NFI Image Feed Server:"
+msgstr ""
 
 #
 msgid "Could not load Medium! No disc inserted?"
@@ -1321,10 +1300,8 @@ msgstr "CrashlogAutoSubmit settings..."
 
 msgid ""
 "Crashlogs found!\n"
-"Send them to Dream Multimedia?"
+"Send them to the Image Developper?"
 msgstr ""
-"Crashlogs found!\n"
-"Send them to Dream Multimedia?"
 
 #
 msgid "Create DVD-ISO"
@@ -1357,6 +1334,9 @@ msgid "Current Transponder"
 msgstr "Current Transponder"
 
 msgid "Current device: "
+msgstr ""
+
+msgid "Current event EPG"
 msgstr ""
 
 msgid "Current settings:"
@@ -1701,8 +1681,8 @@ msgstr "? האם ברצונך לבצע שוב סריקת שירותים ידני
 msgid "Do you want to download the image to %s ?"
 msgstr ""
 
-msgid "Do you want to enable the parental control feature on your dreambox?"
-msgstr "?האם אתה רוצה להפעיל את תכונת בקרת ההורים על הדרימבוקס שלך "
+msgid "Do you want to enable the parental control feature on your receiver?"
+msgstr ""
 
 msgid "Do you want to install the package:\n"
 msgstr ":האם ברצונך להתקין את החבילה\n"
@@ -1715,8 +1695,8 @@ msgstr "? האם ברצונך לנגן את הדי.וי.די שבכונן"
 msgid "Do you want to preview this DVD before burning?"
 msgstr "?האם ברצונך להציג את הדי.וי.די לפני הצריבה"
 
-msgid "Do you want to reboot your Dreambox?"
-msgstr "?האם ברצונך לאתחל את הדרימבוקס"
+msgid "Do you want to reboot your receiver?"
+msgstr ""
 
 msgid "Do you want to remove the package:\n"
 msgstr "האם ברצונך להסיר את החבילה\n"
@@ -1736,16 +1716,13 @@ msgstr ""
 "? האם ברצונך לשלוח את כתובת האימייל שלך ושם על מנת שנוכל ליצור איתך קשר "
 "במידת הצורך"
 
-#
-msgid "Do you want to update your Dreambox?"
-msgstr "?האם ברצונך לעדכן את הדרימבוקס"
+msgid "Do you want to update your receiver?"
+msgstr ""
 
 msgid ""
-"Do you want to update your Dreambox?\n"
+"Do you want to update your receiver?\n"
 "After pressing OK, please wait!"
 msgstr ""
-"?האם ברצונך לעדכן את הדרימבוקס\n"
-"! אחרי לחיצה על אישור, המתן בבקשה"
 
 msgid "Do you want to upgrade the package:\n"
 msgstr "?האם ברצונך לשדרג את החבילה\n"
@@ -1796,13 +1773,6 @@ msgstr "מוריד"
 
 msgid "Downloading plugin information. Please wait..."
 msgstr "...מוריד פרטים על הפלאגין, אנא המתן"
-
-#
-msgid "Dreambox format data DVD (HDTV compatible)"
-msgstr ""
-
-msgid "Dreambox software because updates are available."
-msgstr "Dreambox software because updates are available."
 
 #
 msgid "Dutch"
@@ -1863,13 +1833,11 @@ msgstr "ערוך רשימת שירותים"
 msgid "Edit settings"
 msgstr "ערוך הגדרות"
 
-#
-msgid "Edit the Nameserver configuration of your Dreambox.\n"
-msgstr "של הדרימבוקס Nameserver ערוך את הגדרות \n"
+msgid "Edit the Nameserver configuration of your receiver.\n"
+msgstr ""
 
-#
-msgid "Edit the network configuration of your Dreambox.\n"
-msgstr "ערוך את הגדרות הרשת של הדרימבוקס שלך \n"
+msgid "Edit the network configuration of your receiver.\n"
+msgstr ""
 
 msgid "Edit title"
 msgstr "ערוך כותרת"
@@ -2323,7 +2291,7 @@ msgstr ""
 msgid "GotoX calibration"
 msgstr ""
 
-msgid "Graph MEpg Settings"
+msgid "GraphMultiEpg Settings"
 msgstr ""
 
 #
@@ -3320,9 +3288,8 @@ msgstr "לא, אך התחל מחדש"
 msgid "No, do nothing."
 msgstr ".לא, לא לעשות כלום"
 
-#
-msgid "No, just start my dreambox"
-msgstr ".לא, רק הפעל את הדרימבוקס"
+msgid "No, just start my receiver"
+msgstr ""
 
 msgid "No, never"
 msgstr ""
@@ -3552,6 +3519,12 @@ msgstr "מספר טלפון"
 msgid "PiPSetup"
 msgstr "הגדרת תמונה בתוך תמונה"
 
+msgid "Picon"
+msgstr ""
+
+msgid "Picon and Service Name"
+msgstr ""
+
 msgid "PicturePlayer"
 msgstr "נגן התמונות"
 
@@ -3691,6 +3664,9 @@ msgstr ".אנא לחץ אשר על מנת להמשיך"
 #
 msgid "Please press OK!"
 msgstr "!אנא לחץ אשר"
+
+msgid "Please select a default EPG type..."
+msgstr ""
 
 msgid "Please select a playlist to delete..."
 msgstr "...אנא בחר רשימת שמע למחיקה"
@@ -4544,6 +4520,9 @@ msgstr "Select channel to record from"
 msgid "Select copy destination for:"
 msgstr ""
 
+msgid "Select default EPG type..."
+msgstr ""
+
 msgid "Select desired image from feed list"
 msgstr ""
 
@@ -4613,6 +4592,9 @@ msgstr "סרבית"
 msgid "Service"
 msgstr "שירות"
 
+msgid "Service Name"
+msgstr ""
+
 #
 msgid "Service Scan"
 msgstr "סרוקת שירות"
@@ -4620,6 +4602,9 @@ msgstr "סרוקת שירות"
 #
 msgid "Service Searching"
 msgstr "סורק שירות"
+
+msgid "Service Title mode"
+msgstr ""
 
 #
 msgid "Service has been added to the favourites."
@@ -4742,12 +4727,6 @@ msgstr "הצג מידע"
 msgid "Show Message when Recording starts"
 msgstr "הצג הודעה כאשר הקלטה מתחילה"
 
-msgid "Show Picons"
-msgstr ""
-
-msgid "Show Service Names "
-msgstr ""
-
 #
 msgid "Show WLAN Status"
 msgstr "הצג סטטוס רשת אלחוטית"
@@ -4815,9 +4794,8 @@ msgstr ".הצג סטטוס חיבור של הרשת האלחוטית\n"
 msgid "Shutdown"
 msgstr "כיבוי"
 
-#
-msgid "Shutdown Dreambox after"
-msgstr "כבה את הדרימבוקס אחרי"
+msgid "Shutdown receiver after"
+msgstr ""
 
 msgid "Side by Side"
 msgstr ""
@@ -5263,8 +5241,8 @@ msgstr "Test Type"
 msgid "Test mode"
 msgstr "Test mode"
 
-msgid "Test the network configuration of your Dreambox.\n"
-msgstr "Test the network configuration of your Dreambox.\n"
+msgid "Test the network configuration of your receiver.\n"
+msgstr ""
 
 msgid "Test-Messagebox?"
 msgstr "Test-Messagebox?"
@@ -5287,19 +5265,14 @@ msgstr ""
 
 msgid ""
 "Thank you for using the wizard. Your box is now ready to use.\n"
-"Please press OK to start using your Dreambox."
+"Please press OK to start using your receiver."
 msgstr ""
-"Thank you for using the wizard. Your box is now ready to use.\n"
-"Please press OK to start using your Dreambox."
 
 msgid ""
 "The DVD standard doesn't support H.264 (HDTV) video streams. Do you want to "
-"create a Dreambox format data DVD (which will not play in stand-alone DVD "
+"create a special format data DVD (which will not play in stand-alone DVD "
 "players) instead?"
 msgstr ""
-"The DVD standard doesn't support H.264 (HDTV) video streams. Do you want to "
-"create a Dreambox format data DVD (which will not play in stand-alone DVD "
-"players) instead?"
 
 msgid ""
 "The NetworkWizard extension is not installed!\n"
@@ -5382,10 +5355,8 @@ msgstr "The installation of the default services lists is finished."
 
 msgid ""
 "The installation of the default settings is finished. You can now continue "
-"configuring your Dreambox by pressing the OK button on the remote control."
+"configuring your receiver by pressing the OK button on the remote control."
 msgstr ""
-"The installation of the default settings is finished. You can now continue "
-"configuring your Dreambox by pressing the OK button on the remote control."
 
 msgid "The md5sum validation failed, the file may be corrupted!"
 msgstr ""
@@ -5496,17 +5467,12 @@ msgid ""
 msgstr ""
 
 #
-#, python-format
-msgid "This Dreambox can't decode %s streams!"
-msgstr ""
-
-#
 msgid "This is step number 2."
 msgstr "This is step number 2."
 
 msgid ""
 "This plugin creates a USB stick which can be used to update the firmware of "
-"your Dreambox without the need for a network or WLAN connection.\n"
+"your receiver without the need for a network or WLAN connection.\n"
 "First, a USB stick needs to be prepared so that it becomes bootable.\n"
 "In the next step, an NFI image file can be downloaded from the update server "
 "and saved on the USB stick.\n"
@@ -5525,6 +5491,10 @@ msgstr ".הפלאגין הזה יותקן"
 
 msgid "This plugin will be removed."
 msgstr ".הפלאגין הזה יוסר"
+
+#, python-format
+msgid "This receiver can't decode %s streams!"
+msgstr ""
 
 msgid ""
 "This test checks for configured Nameservers.\n"
@@ -5696,7 +5666,7 @@ msgid "To subtitle selection"
 msgstr ""
 
 msgid ""
-"To update your Dreambox firmware, please follow these steps:\n"
+"To update your receiver firmware, please follow these steps:\n"
 "1) Turn off your box with the rear power switch and make sure the bootable "
 "USB stick is plugged in.\n"
 "2) Turn mains back on and hold the DOWN button on the front panel pressed "
@@ -5922,15 +5892,15 @@ msgstr ""
 msgid "Upgrade finished."
 msgstr ".שדרוג הסתיים"
 
-msgid "Upgrade finished. Do you want to reboot your Dreambox?"
+msgid "Upgrade finished. Do you want to reboot your receiver?"
 msgstr ""
 
 #
 msgid "Upgrading"
 msgstr "משדרג"
 
-msgid "Upgrading Dreambox... Please wait"
-msgstr "משדרג דרימבוקס...נא להמתין"
+msgid "Upgrading receiver... Please wait"
+msgstr ""
 
 #
 msgid "Use"
@@ -6272,29 +6242,24 @@ msgstr ""
 
 msgid ""
 "Welcome to the Image upgrade wizard. The wizard will assist you in upgrading "
-"the firmware of your Dreambox by providing a backup facility for your "
+"the firmware of your receiver by providing a backup facility for your "
 "current settings and a short explanation of how to upgrade your firmware."
 msgstr ""
-"Welcome to the Image upgrade wizard. The wizard will assist you in upgrading "
-"the firmware of your Dreambox by providing a backup facility for your "
-"current settings and a short explanation of how to upgrade your firmware."
 
-#
 msgid ""
 "Welcome to the cleanup wizard.\n"
 "\n"
 "We have detected that your available internal memory has dropped below 2MB.\n"
-"To ensure stable operation of your Dreambox, the internal memory should be "
+"To ensure stable operation of your receiver, the internal memory should be "
 "cleaned up.\n"
 "You can use this wizard to remove some extensions.\n"
 msgstr ""
 
-#
 msgid ""
 "Welcome.\n"
 "\n"
-"If you want to connect your Dreambox to the Internet, this wizard will guide "
-"you through the basic network setup of your Dreambox.\n"
+"If you want to connect your receiver to the Internet, this wizard will guide "
+"you through the basic network setup of your receiver.\n"
 "\n"
 "Press OK to start configuring your network"
 msgstr ""
@@ -6302,13 +6267,9 @@ msgstr ""
 msgid ""
 "Welcome.\n"
 "\n"
-"This start wizard will guide you through the basic setup of your Dreambox.\n"
+"This start wizard will guide you through the basic setup of your receiver.\n"
 "Press the OK button on your remote control to move to the next step."
 msgstr ""
-"Welcome.\n"
-"\n"
-"This start wizard will guide you through the basic setup of your Dreambox.\n"
-"Press the OK button on your remote control to move to the next step."
 
 #
 msgid "Welcome..."
@@ -6458,8 +6419,8 @@ msgstr ""
 msgid "You can install this plugin."
 msgstr "You can install this plugin."
 
-msgid "You can only burn Dreambox recordings!"
-msgstr "You can only burn Dreambox recordings!"
+msgid "You can only burn receiver recordings!"
+msgstr ""
 
 msgid "You can remove this plugin."
 msgstr "You can remove this plugin."
@@ -6511,17 +6472,12 @@ msgid "You have to wait %s!"
 msgstr "You have to wait %s!"
 
 msgid ""
-"You need a PC connected to your dreambox. If you need further instructions, "
+"You need a PC connected to your receiver. If you need further instructions, "
 "please visit the website http://www.dm7025.de.\n"
-"Your dreambox will now be halted. After you have performed the update "
+"Your receiver will now be halted. After you have performed the update "
 "instructions from the website, your new firmware will ask you to restore "
 "your settings."
 msgstr ""
-"You need a PC connected to your dreambox. If you need further instructions, "
-"please visit the website http://www.dm7025.de.\n"
-"Your dreambox will now be halted. After you have performed the update "
-"instructions from the website, your new firmware will ask you to restore "
-"your settings."
 
 msgid ""
 "You need to set a PIN code and hide it from your children.\n"
@@ -6544,22 +6500,6 @@ msgstr ""
 "\n"
 
 msgid ""
-"Your Dreambox is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Your Dreambox is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-
-msgid "Your Dreambox will restart after pressing OK on your remote control."
-msgstr "Your Dreambox will restart after pressing OK on your remote control."
-
-msgid ""
 "Your backup succeeded. We will now continue to explain the further upgrade "
 "process."
 msgstr ""
@@ -6575,16 +6515,6 @@ msgstr ""
 
 msgid "Your current collection will get lost!"
 msgstr "Your current collection will get lost!"
-
-msgid "Your dreambox is shutting down. Please stand by..."
-msgstr "Your dreambox is shutting down. Please stand by..."
-
-msgid ""
-"Your dreambox isn't connected to the internet properly. Please check it and "
-"try again."
-msgstr ""
-"Your dreambox isn't connected to the internet properly. Please check it and "
-"try again."
 
 msgid "Your email address:"
 msgstr "Your email address:"
@@ -6614,10 +6544,29 @@ msgstr "Your name (optional):"
 msgid "Your network configuration has been activated."
 msgstr "Your network configuration has been activated."
 
+msgid ""
+"Your receiver is now ready to use.\n"
+"\n"
+"Your internet connection is working now.\n"
+"\n"
+"Please press OK to continue."
+msgstr ""
+
 msgid "Your receiver is rebooting"
 msgstr ""
 
 msgid "Your receiver is shutting down"
+msgstr ""
+
+msgid "Your receiver is shutting down. Please stand by..."
+msgstr ""
+
+msgid ""
+"Your receiver isn't connected to the internet properly. Please check it and "
+"try again."
+msgstr ""
+
+msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr ""
 
 #
@@ -7514,6 +7463,9 @@ msgstr "previous channel"
 msgid "previous channel in history"
 msgstr "previous channel in history"
 
+msgid "receiver software because updates are available."
+msgstr ""
+
 msgid "record"
 msgstr "הקלט"
 
@@ -7767,6 +7719,9 @@ msgstr "תוויות מיוחדות"
 msgid "special events"
 msgstr ""
 
+msgid "special format data DVD (HDTV compatible)"
+msgstr ""
+
 msgid "sports (general)"
 msgstr ""
 
@@ -7970,11 +7925,9 @@ msgid "yes (keep feeds)"
 msgstr "כן (שמור פידים)"
 
 msgid ""
-"your dreambox might be unusable now. Please consult the manual for further "
-"assistance before rebooting your dreambox."
+"your receiver might be unusable now. Please consult the manual for further "
+"assistance before rebooting your receiver."
 msgstr ""
-"your dreambox might be unusable now. Please consult the manual for further "
-"assistance before rebooting your dreambox."
 
 msgid "zap"
 msgstr "זיפזופ"
