--- a/po/lv.po
+++ b/po/lv.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-07-25 16:21+0200\n"
+"POT-Creation-Date: 2012-08-05 10:00+0200\n"
 "PO-Revision-Date: 2009-02-25 20:35+0200\n"
 "Last-Translator: Ivo Grinbergs <ivog@apollo.lv>\n"
 "Language-Team: Ivo / enigma2 (c) <ivog@apolllo.lv>\n"
@@ -32,13 +32,10 @@ msgstr ""
 "\n"
 "Nospiediet OK un gaidiet!"
 
-#
 msgid ""
 "\n"
-"Backup your Dreambox settings."
+"Backup your receiver settings."
 msgstr ""
-"\n"
-"Veidot Dreambox iestatījumu dublējumkopiju."
 
 #
 msgid ""
@@ -48,19 +45,15 @@ msgstr ""
 "\n"
 "Rediģēt atjaunināšanas avota adresi."
 
-#
 msgid ""
 "\n"
-"Manage extensions or plugins for your Dreambox"
+"Manage extensions or plugins for your receiver"
 msgstr ""
 
-#
 msgid ""
 "\n"
-"Online update of your Dreambox software."
+"Online update of your receiver software."
 msgstr ""
-"\n"
-"Dreambox programmatūras atjaunināšana tiešsaistē."
 
 #
 msgid ""
@@ -73,26 +66,20 @@ msgstr ""
 #
 msgid ""
 "\n"
-"Restore your Dreambox settings."
-msgstr ""
-"\n"
-"Atjaunot Dreambox iestatījumus."
-
-#
-msgid ""
-"\n"
-"Restore your Dreambox with a new firmware."
-msgstr ""
-"\n"
-"Atjaunot Dreambox ar jaunu programmatūru."
-
-#
-msgid ""
-"\n"
 "Restore your backups by date."
 msgstr ""
 "\n"
 "Atjaunot dublējumkopijas pēc datuma."
+
+msgid ""
+"\n"
+"Restore your receiver settings."
+msgstr ""
+
+msgid ""
+"\n"
+"Restore your receiver with a new firmware."
+msgstr ""
 
 #
 msgid ""
@@ -164,6 +151,9 @@ msgstr ""
 msgid "%2d:%02d:%02d"
 msgstr ""
 
+msgid "%A %d %B"
+msgstr ""
+
 #. TRANSLATORS: long date representations dayname daynum monthname in strftime() format! See 'man strftime'
 msgid "%A %e %B"
 msgstr ""
@@ -220,6 +210,9 @@ msgstr[1] ""
 #, python-format
 msgid "%d services found!"
 msgstr "%d kanāli atrasti!"
+
+msgid "%d-%m"
+msgstr ""
 
 #
 msgid "%d.%B %Y"
@@ -407,21 +400,15 @@ msgstr ""
 msgid "A demo plugin for TPM usage."
 msgstr ""
 
-#
 msgid ""
 "A finished record timer wants to set your\n"
-"Dreambox to standby. Do that now?"
+"receiver to standby. Do that now?"
 msgstr ""
-"Taimeris ir beidzis ierakstu un vēlas pārslēgt\n"
-"Dreambox gaidstāves režīmā. Vai darīt to tagad?"
 
-#
 msgid ""
 "A finished record timer wants to shut down\n"
-"your Dreambox. Shutdown now?"
+"your receiver. Shutdown now?"
 msgstr ""
-"Taimeris ir beidzis ierakstu un vēlas izslēgt\n"
-"Dreambox. Vai darīt to tagad?"
 
 #
 # ???
@@ -482,21 +469,15 @@ msgid ""
 "Do you want to disable the second network interface?"
 msgstr ""
 
-#
 msgid ""
 "A sleep timer wants to set your\n"
-"Dreambox to standby. Do that now?"
+"receiver to standby. Do that now?"
 msgstr ""
-"Miega taimeris vēlas pārslēgt\n"
-"Dreambox gaidstāves režīmā. Vai darīt to tagad?"
 
-#
 msgid ""
 "A sleep timer wants to shut down\n"
-"your Dreambox. Shutdown now?"
+"your receiver. Shutdown now?"
 msgstr ""
-"Miega taimeris vēlas izslēgt\n"
-"Dreambox. Vai darīt to tagad?"
 
 #
 msgid "A small overview of the available icon states and actions."
@@ -614,9 +595,8 @@ msgstr "Pievienot favorītiem"
 msgid "Add/Remove timer for current event"
 msgstr ""
 
-#
 msgid ""
-"Adds enigma2 settings and dreambox model informations like SN, rev... if "
+"Adds enigma2 settings and receiver model informations like SN, rev... if "
 "enabled."
 msgstr ""
 
@@ -677,14 +657,10 @@ msgstr "Pēc notikuma"
 msgid "After pressing OK, please wait!"
 msgstr ""
 
-#
-# ???
 msgid ""
 "After the start wizard is completed, you need to protect single services. "
-"Refer to your dreambox's manual on how to do that."
+"Refer to your receiver's manual on how to do that."
 msgstr ""
-"Pēc starta vednis ir pabeigts, jums ir jāaizsargā atsevišķi kanāli. "
-"Meklējiet dreambox rokasgrāmatā kā to izdarīt."
 
 #
 msgid "Album"
@@ -1421,9 +1397,8 @@ msgstr ""
 msgid "Copy"
 msgstr ""
 
-#
-msgid "Could not connect to Dreambox .NFI Image Feed Server:"
-msgstr "Nevar savienoties ar Dreambox .NFI imidža barotnes serveris:"
+msgid "Could not connect to receiver .NFI Image Feed Server:"
+msgstr ""
 
 #
 msgid "Could not load Medium! No disc inserted?"
@@ -1458,10 +1433,9 @@ msgstr ""
 msgid "CrashlogAutoSubmit settings..."
 msgstr ""
 
-#
 msgid ""
 "Crashlogs found!\n"
-"Send them to Dream Multimedia?"
+"Send them to the Image Developper?"
 msgstr ""
 
 #
@@ -1497,6 +1471,9 @@ msgid "Current Transponder"
 msgstr "Pašreizējais transponderis"
 
 msgid "Current device: "
+msgstr ""
+
+msgid "Current event EPG"
 msgstr ""
 
 #
@@ -1896,9 +1873,8 @@ msgstr "Vai vēleties manuāli meklēt citus kanālus?"
 msgid "Do you want to download the image to %s ?"
 msgstr ""
 
-#
-msgid "Do you want to enable the parental control feature on your dreambox?"
-msgstr "Vai vēlaties aktivizēt vecāku kontroles iespēju?"
+msgid "Do you want to enable the parental control feature on your receiver?"
+msgstr ""
 
 #
 msgid "Do you want to install the package:\n"
@@ -1912,9 +1888,8 @@ msgstr "Vai vēlaties atskaņot DVD?"
 msgid "Do you want to preview this DVD before burning?"
 msgstr "Vai vēleties skatīt šo DVD pirms rakstīšanas?"
 
-#
-msgid "Do you want to reboot your Dreambox?"
-msgstr "Vai vēlaties atsāknēt Dreambox?"
+msgid "Do you want to reboot your receiver?"
+msgstr ""
 
 #
 msgid "Do you want to remove the package:\n"
@@ -1934,17 +1909,13 @@ msgid ""
 "if needed?"
 msgstr ""
 
-#
-msgid "Do you want to update your Dreambox?"
-msgstr "Vai vēlaties atjaunināt Dreambox?"
+msgid "Do you want to update your receiver?"
+msgstr ""
 
-#
 msgid ""
-"Do you want to update your Dreambox?\n"
+"Do you want to update your receiver?\n"
 "After pressing OK, please wait!"
 msgstr ""
-"Vai vēlaties atjaunināt Dreambox?\n"
-"Nospiediet OK un gaidiet!"
 
 #
 msgid "Do you want to upgrade the package:\n"
@@ -2007,14 +1978,6 @@ msgstr "Lejuplādē"
 #
 msgid "Downloading plugin information. Please wait..."
 msgstr "Lejuplādē spraudņu informāciju. Lūdzu gaidiet..."
-
-#
-msgid "Dreambox format data DVD (HDTV compatible)"
-msgstr "Dreambox formāta datu DVD (savietojams ar HDTV)"
-
-#
-msgid "Dreambox software because updates are available."
-msgstr ""
 
 #
 msgid "Dutch"
@@ -2082,13 +2045,11 @@ msgstr "Rediģēt kanālu sarakstu"
 msgid "Edit settings"
 msgstr "Rediģēt iestatījumus"
 
-#
-msgid "Edit the Nameserver configuration of your Dreambox.\n"
-msgstr "Rediģēt Dreambox domēna vārdu servera konfigurāciju.\n"
+msgid "Edit the Nameserver configuration of your receiver.\n"
+msgstr ""
 
-#
-msgid "Edit the network configuration of your Dreambox.\n"
-msgstr "Rediģēt Dreambox tīkla konfigurāciju.\n"
+msgid "Edit the network configuration of your receiver.\n"
+msgstr ""
 
 #
 msgid "Edit title"
@@ -2587,7 +2548,7 @@ msgstr ""
 msgid "GotoX calibration"
 msgstr ""
 
-msgid "Graph MEpg Settings"
+msgid "GraphMultiEpg Settings"
 msgstr ""
 
 #
@@ -3676,9 +3637,8 @@ msgstr "Nē, bet restartēt no sākuma"
 msgid "No, do nothing."
 msgstr "Nē, nedarīt neko"
 
-#
-msgid "No, just start my dreambox"
-msgstr "Nē, vienkārši startēt dreambox"
+msgid "No, just start my receiver"
+msgstr ""
 
 msgid "No, never"
 msgstr ""
@@ -3927,6 +3887,12 @@ msgstr ""
 msgid "PiPSetup"
 msgstr "PiP iestatne"
 
+msgid "Picon"
+msgstr ""
+
+msgid "Picon and Service Name"
+msgstr ""
+
 #
 msgid "PicturePlayer"
 msgstr "Attēlu rādītājs"
@@ -4086,6 +4052,9 @@ msgstr "Lūdzu spiediet OK, lai turpinātu."
 #
 msgid "Please press OK!"
 msgstr "Lūdzu spiediet OK!"
+
+msgid "Please select a default EPG type..."
+msgstr ""
 
 #
 msgid "Please select a playlist to delete..."
@@ -5058,6 +5027,9 @@ msgstr "Izvēlēties ierakstāmo kanālu"
 msgid "Select copy destination for:"
 msgstr ""
 
+msgid "Select default EPG type..."
+msgstr ""
+
 msgid "Select desired image from feed list"
 msgstr ""
 
@@ -5141,6 +5113,9 @@ msgstr ""
 msgid "Service"
 msgstr "Kanāls"
 
+msgid "Service Name"
+msgstr ""
+
 #
 msgid "Service Scan"
 msgstr "Kanālu meklēšana"
@@ -5148,6 +5123,9 @@ msgstr "Kanālu meklēšana"
 #
 msgid "Service Searching"
 msgstr "Kanālu meklēšana"
+
+msgid "Service Title mode"
+msgstr ""
 
 #
 msgid "Service has been added to the favourites."
@@ -5279,12 +5257,6 @@ msgstr "Rādīt informāciju"
 msgid "Show Message when Recording starts"
 msgstr ""
 
-msgid "Show Picons"
-msgstr ""
-
-msgid "Show Service Names "
-msgstr ""
-
 #
 msgid "Show WLAN Status"
 msgstr "Rādīt bezvadu tīkla statusu"
@@ -5356,9 +5328,8 @@ msgstr "Rādīt bezvadu tīkla savienojuma statusu.\n"
 msgid "Shutdown"
 msgstr ""
 
-#
-msgid "Shutdown Dreambox after"
-msgstr "Izslēgt Dreambox pēc"
+msgid "Shutdown receiver after"
+msgstr ""
 
 msgid "Side by Side"
 msgstr ""
@@ -5836,9 +5807,8 @@ msgstr "Pārbaudes veids"
 msgid "Test mode"
 msgstr "Testa režīms"
 
-#
-msgid "Test the network configuration of your Dreambox.\n"
-msgstr "Pārbaudīt tīkla Dreambox konfigurāciju.\n"
+msgid "Test the network configuration of your receiver.\n"
+msgstr ""
 
 #
 msgid "Test-Messagebox?"
@@ -5859,23 +5829,16 @@ msgid ""
 "Please press OK to continue."
 msgstr ""
 
-#
 msgid ""
 "Thank you for using the wizard. Your box is now ready to use.\n"
-"Please press OK to start using your Dreambox."
+"Please press OK to start using your receiver."
 msgstr ""
-"Pateicamies par vedņa izmantošanu. Ierīce ir gatava lietošanai.\n"
-"Lūdzu spiediet OK, lai sāktu lietot Dreambox."
 
-#
 msgid ""
 "The DVD standard doesn't support H.264 (HDTV) video streams. Do you want to "
-"create a Dreambox format data DVD (which will not play in stand-alone DVD "
+"create a special format data DVD (which will not play in stand-alone DVD "
 "players) instead?"
 msgstr ""
-"DVD standarts neatbalsta H.264 (HDTV) attēla plūsmas. Vai jūs tā vietā "
-"vēlaties izveidot Dreambox formāta datu DVD (kuru nevarēs izmantot standarta "
-"DVD atskaņotājos)?"
 
 #
 msgid ""
@@ -5957,13 +5920,10 @@ msgstr ""
 msgid "The installation of the default services lists is finished."
 msgstr "Noklusēto kanālu sarakstu uzstādīšana ir pabeigta."
 
-#
 msgid ""
 "The installation of the default settings is finished. You can now continue "
-"configuring your Dreambox by pressing the OK button on the remote control."
+"configuring your receiver by pressing the OK button on the remote control."
 msgstr ""
-"Noklusēto iestatījumu uzstādīšana ir pabeigta. Tagad varat turpināt Dreambox "
-"konfigurēšanu, spiežot OK taustiņu uz tālvadības pults."
 
 msgid "The md5sum validation failed, the file may be corrupted!"
 msgstr ""
@@ -6090,17 +6050,12 @@ msgstr ""
 "saturu."
 
 #
-#, python-format
-msgid "This Dreambox can't decode %s streams!"
-msgstr ""
-
-#
 msgid "This is step number 2."
 msgstr "Šis ir solis numur 2."
 
 msgid ""
 "This plugin creates a USB stick which can be used to update the firmware of "
-"your Dreambox without the need for a network or WLAN connection.\n"
+"your receiver without the need for a network or WLAN connection.\n"
 "First, a USB stick needs to be prepared so that it becomes bootable.\n"
 "In the next step, an NFI image file can be downloaded from the update server "
 "and saved on the USB stick.\n"
@@ -6122,6 +6077,10 @@ msgstr ""
 
 #
 msgid "This plugin will be removed."
+msgstr ""
+
+#, python-format
+msgid "This receiver can't decode %s streams!"
 msgstr ""
 
 #
@@ -6309,7 +6268,7 @@ msgid "To subtitle selection"
 msgstr ""
 
 msgid ""
-"To update your Dreambox firmware, please follow these steps:\n"
+"To update your receiver firmware, please follow these steps:\n"
 "1) Turn off your box with the rear power switch and make sure the bootable "
 "USB stick is plugged in.\n"
 "2) Turn mains back on and hold the DOWN button on the front panel pressed "
@@ -6554,17 +6513,15 @@ msgstr ""
 msgid "Upgrade finished."
 msgstr "Atjaunināšana pabeigta."
 
-#
-msgid "Upgrade finished. Do you want to reboot your Dreambox?"
-msgstr "Atjaunināšana pabeigta. Vai vēlaties atsāknēt Dreambox?"
+msgid "Upgrade finished. Do you want to reboot your receiver?"
+msgstr ""
 
 #
 msgid "Upgrading"
 msgstr "Atjaunošana"
 
-#
-msgid "Upgrading Dreambox... Please wait"
-msgstr "Atjauno Dreambox... Lūdzu gaidiet"
+msgid "Upgrading receiver... Please wait"
+msgstr ""
 
 #
 msgid "Use"
@@ -6947,47 +6904,36 @@ msgstr ""
 "Tad ejiet uz beigām, spiediet OK, izvēlieties 'griezuma beigas'. Tas arī "
 "viss."
 
-#
 msgid ""
 "Welcome to the Image upgrade wizard. The wizard will assist you in upgrading "
-"the firmware of your Dreambox by providing a backup facility for your "
+"the firmware of your receiver by providing a backup facility for your "
 "current settings and a short explanation of how to upgrade your firmware."
 msgstr ""
-"Sveicināti imidža atjaunināšanas vednī. Vednis palīdzēs Jums atjaunot "
-"Dreambox programmatūru, sniedzot pašreizējo iestatījumu dublējumkopēšanas "
-"iespējas, kā arī īsumā izskaidros, kā veikt programmatūras atjaunināšanu."
 
-#
 msgid ""
 "Welcome to the cleanup wizard.\n"
 "\n"
 "We have detected that your available internal memory has dropped below 2MB.\n"
-"To ensure stable operation of your Dreambox, the internal memory should be "
+"To ensure stable operation of your receiver, the internal memory should be "
 "cleaned up.\n"
 "You can use this wizard to remove some extensions.\n"
 msgstr ""
 
-#
 msgid ""
 "Welcome.\n"
 "\n"
-"If you want to connect your Dreambox to the Internet, this wizard will guide "
-"you through the basic network setup of your Dreambox.\n"
+"If you want to connect your receiver to the Internet, this wizard will guide "
+"you through the basic network setup of your receiver.\n"
 "\n"
 "Press OK to start configuring your network"
 msgstr ""
 
-#
 msgid ""
 "Welcome.\n"
 "\n"
-"This start wizard will guide you through the basic setup of your Dreambox.\n"
+"This start wizard will guide you through the basic setup of your receiver.\n"
 "Press the OK button on your remote control to move to the next step."
 msgstr ""
-"Sveicināti.\n"
-"\n"
-"Šis sākuma vednis būs Jūsu ceļvedis Dreambox pamata iestatnē.\n"
-"Spiediet OK taustiņu uz tālvadības pults, lai pārietu uz nākamo soli."
 
 #
 msgid "Welcome..."
@@ -7158,8 +7104,7 @@ msgstr ""
 msgid "You can install this plugin."
 msgstr ""
 
-#
-msgid "You can only burn Dreambox recordings!"
+msgid "You can only burn receiver recordings!"
 msgstr ""
 
 #
@@ -7221,19 +7166,13 @@ msgstr ""
 msgid "You have to wait %s!"
 msgstr "Jums jāuzgaida %s!"
 
-#
 msgid ""
-"You need a PC connected to your dreambox. If you need further instructions, "
+"You need a PC connected to your receiver. If you need further instructions, "
 "please visit the website http://www.dm7025.de.\n"
-"Your dreambox will now be halted. After you have performed the update "
+"Your receiver will now be halted. After you have performed the update "
 "instructions from the website, your new firmware will ask you to restore "
 "your settings."
 msgstr ""
-"Personālajam datoram jābūt savienotam ar Dreambox. Ja Jums ir nepieciešamas "
-"turpmākas instrukcijas, lūdzu apmeklējiet vietni http://www.dm7025.de.\n"
-"Dreambox tagad tiks apturēts. Pēc tam, kad būs izpildītas atjaunināšanas "
-"instrukcijas no tīkla vietnes, jaunā programmatūra piedāvās Jums atjaunot "
-"iestatījumus."
 
 msgid ""
 "You need to set a PIN code and hide it from your children.\n"
@@ -7254,19 +7193,6 @@ msgstr ""
 
 #
 msgid ""
-"Your Dreambox is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-
-#
-msgid "Your Dreambox will restart after pressing OK on your remote control."
-msgstr "Dreambox restartēsies pēc OK taustiņa nospiešanas uz tālvadības pults."
-
-#
-msgid ""
 "Your backup succeeded. We will now continue to explain the further upgrade "
 "process."
 msgstr ""
@@ -7282,18 +7208,6 @@ msgstr ""
 #
 msgid "Your current collection will get lost!"
 msgstr ""
-
-#
-msgid "Your dreambox is shutting down. Please stand by..."
-msgstr "Dreambox izslēdzas. Lūdzu gaidiet..."
-
-#
-msgid ""
-"Your dreambox isn't connected to the internet properly. Please check it and "
-"try again."
-msgstr ""
-"Dreambox nav pievienots internetam kā nākas. Lūdzu pārbaudiet un mēģiniet "
-"vēl."
 
 #
 msgid "Your email address:"
@@ -7327,10 +7241,29 @@ msgstr ""
 msgid "Your network configuration has been activated."
 msgstr "Tīkla konfigurācija aktivizēta."
 
+msgid ""
+"Your receiver is now ready to use.\n"
+"\n"
+"Your internet connection is working now.\n"
+"\n"
+"Please press OK to continue."
+msgstr ""
+
 msgid "Your receiver is rebooting"
 msgstr ""
 
 msgid "Your receiver is shutting down"
+msgstr ""
+
+msgid "Your receiver is shutting down. Please stand by..."
+msgstr ""
+
+msgid ""
+"Your receiver isn't connected to the internet properly. Please check it and "
+"try again."
+msgstr ""
+
+msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr ""
 
 #
@@ -8350,6 +8283,9 @@ msgstr "iepriekšējais kanāls"
 msgid "previous channel in history"
 msgstr "iepriekšējais kanāls vēsturē"
 
+msgid "receiver software because updates are available."
+msgstr ""
+
 #
 msgid "record"
 msgstr "ierakstīt"
@@ -8640,6 +8576,9 @@ msgstr ""
 msgid "special events"
 msgstr ""
 
+msgid "special format data DVD (HDTV compatible)"
+msgstr ""
+
 msgid "sports (general)"
 msgstr ""
 
@@ -8870,13 +8809,10 @@ msgstr "jā"
 msgid "yes (keep feeds)"
 msgstr "jā (paturēt barotnes)"
 
-#
 msgid ""
-"your dreambox might be unusable now. Please consult the manual for further "
-"assistance before rebooting your dreambox."
+"your receiver might be unusable now. Please consult the manual for further "
+"assistance before rebooting your receiver."
 msgstr ""
-"Dreambox tagad var būt nelietojams. Lūdzu skatīt lietošanas instrukciju "
-"tālākai palīdzībai, pirms atsāknējat Dreambox."
 
 #
 msgid "zap"
